chore: full MVP readiness sync - environment stabilized on Node 20, branding assets updated, and landing page API centralized

--- a/frontend/locales/es.json
+++ b/frontend/locales/es.json
@@ -1,7 +1,7 @@
 {
   "common": {
     "search": "Buscar",
-    "filter": "Filtrer",
+    "filter": "Filtrar",
     "loading": "Cargando...",
     "cancel": "Cancelar",
     "confirm": "Confirmar",
@@ -11,7 +11,18 @@
     "success": "Éxito",
     "error": "Error",
     "language_choice": "Elegir idioma",
-    "items_count": "{{count}} artículo(s)"
+    "items_count": "{{count}} artículo(s)",
+    "my_shop": "Mi Tienda",
+    "periods": {
+      "7d": "7d",
+      "30d": "30d",
+      "90d": "90d",
+      "1y": "1a",
+      "custom": "Personalizado",
+      "from": "Desde",
+      "to": "hasta",
+      "apply": "Aplicar"
+    }
   },
   "marketplace": {
     "title": "Mercado",
@@ -19,20 +30,24 @@
     "products": "Productos",
     "search_supplier": "Buscar un proveedor...",
     "search_product": "Buscar un producto...",
-    "city_filter": "Filtrer par ville...",
+    "city_filter": "Filtrar por ciudad...",
     "category": "Categoría",
-    "min_rating": "Note minimale",
-    "verified_only": "Vérifiés uniquement",
-    "price_range": "Gamme de prix",
-    "min_price": "Min",
-    "max_price": "Max",
-    "all": "Toutes",
+    "min_rating": "Calificación mínima",
+    "verified_only": "Solo verificados",
+    "price_range": "Rango de precios",
+    "min_price": "Mín",
+    "max_price": "Máx",
+    "all": "Todas",
     "star": "⭐",
-    "apply": "Appliquer",
-    "reset": "Réinitialiser",
-    "empty_suppliers": "Aucun fournisseur trouvé",
-    "empty_products": "Aucun produit trouvé",
-    "modify_criteria": "Modifiez vos critères de recherche"
+    "apply": "Aplicar",
+    "reset": "Reiniciar",
+    "empty_suppliers": "No se encontraron proveedores",
+    "empty_products": "No se encontraron productos",
+    "modify_criteria": "Modifique sus criterios de búsqueda",
+    "filters": "Filtros",
+    "city": "Ciudad",
+    "send_invitation": "Enviar invitación",
+    "contact": "Contactar"
   },
   "settings": {
     "account": "Cuenta",
@@ -90,6 +105,334 @@
     "all": "Todo",
     "catalog": "Catálogo"
   },
+  "accounting": {
+    "title": "Contabilidad",
+    "revenue": "Facturación",
+    "sales_count": "Ventas realizadas",
+    "avg_basket": "Cesta Promedio",
+    "total_expenses": "Total Gastos",
+    "expenses": "Gastos",
+    "reports": "Informes",
+    "new_report": "Nuevo Informe",
+    "add_expense": "Registrar Gasto",
+    "payment_methods": "Ventas por método de pago",
+    "revenue_evolution": "Evolución de ingresos",
+    "daily": "Diario",
+    "weekly": "Semanal",
+    "monthly": "Mensual",
+    "export_pdf": "Exportar PDF",
+    "export_excel": "Exportar Excel",
+    "empty_expenses": "No hay gastos registrados",
+    "expense_name": "Nombre del gasto",
+    "amount": "Importe",
+    "category": "Categoría",
+    "date": "Fecha",
+    "expense_modal_title": "Detalles del gasto",
+    "expense_added": "Gasto registrado con éxito",
+    "confirm_delete_expense": "¿Desea eliminar este gasto?",
+    "top_products": "Top Productos (Volumen)",
+    "recent_sales": "Ventas Recientes",
+    "balance": "Balance",
+    "profit": "Beneficio",
+    "loss": "Pérdida",
+    "margin_on_sales": "Margen comercial",
+    "margin_percentage": "Margen: {{percentage}}%",
+    "revenue_info": "Total de ventas del periodo antes de deducir gastos.",
+    "margin_on_sales_info": "Diferencia entre el precio de venta y el coste de compra de los productos vendidos.",
+    "net_profit": "Resultado Neto",
+    "net_profit_info": "Beneficio real después de deducir todos los gastos (alquiler, transporte, etc.).",
+    "stock_value_purchase": "Valor Stock (Compra)",
+    "stock_value_selling": "Valor Venta: {{value}}",
+    "losses": "Pérdidas / Daños",
+    "loss_reasons": "{{count}} motivo(s) de pérdida",
+    "items_sold": "Artículos Vendidos",
+    "avg_sale": "Cesta promedio: {{value}}",
+    "supplier_purchases": "Compras a Proveedores",
+    "purchases_count": "{{count}} pedido(s)",
+    "cost_cogs": "Coste de compra",
+    "gross_margin": "Margen Bruto",
+    "payment_cash": "Efectivo",
+    "payment_mobile_money": "Mobile Money",
+    "payment_card": "Tarjeta",
+    "payment_transfer": "Transferencia",
+    "payment_credit": "Crédito Cliente",
+    "see_other_expenses": "Ver {{count}} más",
+    "invalid_amount": "Importe no válido",
+    "save_error": "Error al guardar",
+    "delete_error": "Error al eliminar",
+    "confirm_expense": "¿Confirmar gasto de {{amount}}?",
+    "no_expenses": "Sin gastos",
+    "expenses_categories": {
+      "rent": "Alquiler",
+      "salary": "Salario",
+      "transport": "Transporte",
+      "merchandise": "Mercancía",
+      "electricity": "Electricidad",
+      "water": "Agua",
+      "internet": "Internet",
+      "other": "Otro"
+    },
+    "report_title": "INFORME DE ACTIVIDAD",
+    "period_label": "Periodo:",
+    "top_products_title": "Top 10 Productos por Rendimiento",
+    "expenses_details_title": "Detalles de los Gastos",
+    "col_product": "Producto",
+    "col_sold": "Vendidos",
+    "col_revenue": "Ingreso",
+    "col_profit": "Beneficio",
+    "col_category": "Categoría",
+    "col_description": "Descripción",
+    "col_amount": "Importe",
+    "generated_on": "Generado el {{date}} por Stockman",
+    "invoice_title": "FACTURA",
+    "recipient_label": "Cliente",
+    "invoice_ref": "Ref",
+    "invoice_date": "Fecha",
+    "payment_method_label": "Método",
+    "notes_label": "Notas"
+  },
+  "orders": {
+    "title": "Pedidos",
+    "suppliers": "Proveedores",
+    "bulk": "Pedidos Agrupados",
+    "returns": "Devoluciones",
+    "returns_credit_notes": "Devoluciones y Notas de Crédito",
+    "new_order": "Nuevo Pedido",
+    "validate_reception": "Validar Recepción",
+    "all": "Todos",
+    "pending": "Pendiente",
+    "confirmed": "Confirmado",
+    "shipped": "Enviado",
+    "shipping": "En curso",
+    "received": "Recibido",
+    "delivered": "Entregado",
+    "cancelled": "Cancelado",
+    "partially_delivered": "Parcialmente Entregado",
+    "approved": "Aprobado",
+    "completed": "Completado",
+    "rejected": "Rechazado",
+    "empty": "No se encontraron pedidos",
+    "details": "Detalles del Pedido",
+    "order_detail": "Detalle del Pedido",
+    "items_count": "{{count}} artículo(s)",
+    "total": "Total",
+    "orders_count": "{{count}} pedido(s)",
+    "returns_count": "{{count}} devolución(es)",
+    "all_suppliers": "Todos los proveedores",
+    "active_credit_notes": "Notas de crédito activas",
+    "credit_notes_count": "{{count}} nota(s) de crédito",
+    "available": "Disponible",
+    "no_returns": "Sin devoluciones",
+    "no_returns_desc": "Las devoluciones aparecerán aquí",
+    "no_orders": "Sin pedidos",
+    "no_orders_desc": "Cree su primer pedido a proveedor",
+    "no_orders_bulk_desc": "No hay pedidos agrupados en curso",
+    "supplier": "Proveedor",
+    "customer": "Cliente",
+    "status": "Estado",
+    "dates": "Fechas",
+    "created_at": "Creado el",
+    "updated_at": "Actualizado el",
+    "expected_delivery": "Entrega prevista",
+    "items": "Artículos",
+    "see_more_items": "Ver {{count}} artículos más",
+    "rate_supplier": "Calificar al proveedor",
+    "touch_star": "Toque una estrella",
+    "history": "Historial",
+    "total_orders": "{{count}} pedidos en total",
+    "partial_delivery": "Recepción Parcial",
+    "enter_received_quantities": "Introduzca las cantidades recibidas",
+    "ordered": "Pedido",
+    "already_received": "Recibido",
+    "partial_notes_placeholder": "Ej: Paquete dañado...",
+    "complete_return_generate_credit_note": "Completar devolución y generar nota de crédito",
+    "new_return": "Nueva Devolución",
+    "return_type": "Tipo de devolución",
+    "items_to_return": "Artículos a devolver",
+    "reason": "Motivo",
+    "reason_placeholder": "Defecto...",
+    "add_product_placeholder": "Añadir un producto...",
+    "return_notes_placeholder": "Motivo de la devolución...",
+    "total_return": "Total devolución",
+    "create_return": "Crear Devolución",
+    "confirm_advance_status": "¿Confirmar cambio al estado {{nextStatus}}?",
+    "advance_status": "Confirmar Cambio de Estado",
+    "update_error": "Error al actualizar el estado",
+    "confirm_cancel": "¿Está seguro de que desea cancelar?",
+    "cancel_order": "Cancelar Pedido",
+    "cancel_error": "Error al cancelar el pedido",
+    "pdf_error": "Error al generar el PDF",
+    "confirm_partial_delivery": "¿Confirmar recepción parcial? El stock se actualizará.",
+    "add_at_least_one_item": "Añada al menos un artículo",
+    "return_created_success": "Devolución creada con éxito",
+    "create_return_error": "No se pudo crear la devolución",
+    "store_config_missing": "Configuración de la tienda no encontrada",
+    "return_completed_credit_note_generated": "Devolución completada y nota de crédito generada",
+    "complete_return_error": "No se pudo completar la devolución",
+    "confirm_complete_return": "¿Confirmar la finalización de la devolución?",
+    "confirmation": "Confirmación",
+    "return_detail": "Detalle de la Devolución",
+    "customer_return": "Devolución de cliente",
+    "supplier_return": "Devolución a proveedor",
+    "returned_items": "Artículos devueltos",
+    "credit_note_generated": "Nota de Crédito Generada",
+    "related_order": "Pedido Relacionado",
+    "confirm_receipt": "Confirmar Recepción"
+  },
+  "crm": {
+    "title": "CRM y Fidelidad",
+    "total_spent": "Ventas totales",
+    "active_clients": "Activos (30d)",
+    "loyalty_strategy": "Estrategia de Fidelización",
+    "points": "Puntos de fidelidad",
+    "reward_threshold": "Umbral de recompensa",
+    "marketing": "Marketing",
+    "whatsapp_campaign": "Campaña WhatsApp",
+    "search_placeholder": "Buscar cliente...",
+    "add_customer": "Nuevo Cliente",
+    "tier_bronze": "Bronce",
+    "tier_silver": "Plata",
+    "tier_gold": "Oro",
+    "tier_platinum": "Platino",
+    "debt": "Deuda",
+    "last_purchase": "Última compra"
+  },
+  "pos": {
+    "title": "Punto de Venta",
+    "search_placeholder": "Buscar producto...",
+    "cart": "Carrito",
+    "empty_cart": "El carrito está vacío",
+    "clear": "Vaciar",
+    "checkout": "Cobrar",
+    "cash": "Efectivo",
+    "mobile_money": "Mobile Money",
+    "credit": "Venta a crédito",
+    "insufficient_stock": "Stock insuficiente",
+    "success": "Venta registrada"
+  },
+  "supplier": {
+    "dashboard": "Panel del Proveedor",
+    "catalog": "Mi Catálogo",
+    "orders": "Pedidos Recibidos",
+    "pending_orders": "Pedidos Pendientes",
+    "revenue_month": "Facturación del mes",
+    "avg_order": "Pedido Promedio",
+    "active_clients": "Clientes Activos",
+    "reviews": "Opiniones de Clientes",
+    "top_products": "Top Productos",
+    "accept": "Aceptar",
+    "refuse": "Rechazar",
+    "ship": "Enviar",
+    "min_order": "Pedido mín.",
+    "available": "Disponible",
+    "unavailable": "No disponible",
+    "categories": "Categorías",
+    "delivery_zones": "Zonas de entrega"
+  },
+  "suppliers": {
+    "title": "Proveedores",
+    "subtitle": "Gestione sus contactos y pedidos",
+    "my_suppliers": "Mis Proveedores",
+    "marketplace": "Marketplace",
+    "search_placeholder": "Nombre, contacto, producto, teléfono...",
+    "sort_by": "Ordenar por",
+    "sort_name": "Nombre A-Z",
+    "sort_recent": "Recientes",
+    "sort_delay": "Plazo de entrega",
+    "filter_by": "Filtrar",
+    "with_phone": "Con teléfono",
+    "with_email": "Con email",
+    "reset_filters": "Reiniciar filtros",
+    "ai_suggestions": "Sugerencias de Reabastecimiento (IA)",
+    "no_results": "Sin resultados",
+    "no_suppliers": "Sin proveedores",
+    "add_suppliers_hint": "Añada sus proveedores habituales",
+    "supplier_count": "{{count}} proveedor(es)",
+    "supplier_search_count": "{{count}} proveedor(es) para \"{{search}}\"",
+    "critical_alert": "CRÍTICO",
+    "alert": "Alerta",
+    "suggestion_order_title": "Sugerencia de Pedido",
+    "suggestion_order_desc": "{{product}}: Stock actual {{current}}. Sugerencia: pedir {{suggested}} unidades a {{supplier}}.",
+    "later": "Más tarde",
+    "draft_success": "Pedido borrador creado con éxito",
+    "call": "Llamar",
+    "visit": "Visitar",
+    "other": "Otro",
+    "whatsapp_log": "Conversación WhatsApp iniciada desde la app",
+    "delete_title": "Eliminar Proveedor",
+    "delete_confirm": "¿Está seguro de que desea eliminar \"{{name}}\"?",
+    "save_error": "No se pudo guardar el proveedor",
+    "delete_error": "No se pudo eliminar",
+    "linked_products": "Productos Vinculados ({{count}})",
+    "link_product": "Vincular Producto",
+    "no_linked_products": "No hay productos vinculados a este proveedor",
+    "link_hint": "Vincule sus productos para seguir los precios y facilitar los pedidos",
+    "stock_value": "Valor del stock",
+    "low_stock_count": "{{count}} producto(s)",
+    "in_stock": "En stock",
+    "supplier_price": "Precio proveedor",
+    "selling_price": "Precio venta",
+    "unlink": "Desvincular",
+    "order_history": "Historial de pedidos",
+    "no_orders": "Ningún pedido realizado",
+    "invoices_safe": "Caja fuerte de Facturas",
+    "add_invoice_feature": "Función de carga próximamente",
+    "no_invoices": "Sin facturas registradas",
+    "add_note": "Añadir nota",
+    "log_placeholder": "Detalles de la interacción...",
+    "interaction_log": "Registro de interacciones",
+    "no_logs": "Sin historial de interacciones",
+    "financial_summary": "Resumen financiero",
+    "total_volume": "Volumen total pagado",
+    "pending_payment": "Pendiente de pago",
+    "key_indicators": "Indicadores clave",
+    "avg_delivery_time": "Plazo medio de entrega",
+    "successful_deliveries": "Entregas exitosas",
+    "reliable_supplier": "Este proveedor es muy fiable en los plazos.",
+    "warning_supplier": "Prevea un margen de seguridad para sus pedidos.",
+    "select_product": "Seleccionar un producto:",
+    "no_products_available": "Sin productos disponibles",
+    "link": "Vincular",
+    "edit_supplier": "Editar Proveedor",
+    "new_supplier": "Nuevo Proveedor",
+    "form_name": "Nombre *",
+    "form_name_placeholder": "Nombre comercial",
+    "form_contact": "Contacto",
+    "form_contact_placeholder": "Nombre del contacto",
+    "form_phone": "Teléfono",
+    "form_phone_placeholder": "+34 XXX XX XX XX",
+    "form_email": "Email",
+    "form_email_placeholder": "email@ejemplo.com",
+    "form_address": "Dirección",
+    "form_address_placeholder": "Ubicación",
+    "form_products": "Productos habituales",
+    "form_products_placeholder": "Arroz, aceite, azúcar...",
+    "form_delay": "Plazo de entrega",
+    "form_delay_placeholder": "Ej: 2-3 días",
+    "form_payment": "Condiciones de pago",
+    "form_payment_placeholder": "Ej: A la entrega",
+    "form_notes": "Notas",
+    "form_notes_placeholder": "Observaciones...",
+    "payment_label": "Pago",
+    "low_stock_label": "Stock bajo",
+    "out_of_stock": "Agotado",
+    "low_stock": "Stock bajo",
+    "stock": "Stock",
+    "status_paid": "Pagado",
+    "status_unpaid": "Pendiente",
+    "phone_missing": "Número de teléfono no indicado",
+    "whatsapp_not_installed": "WhatsApp no está instalado en este dispositivo",
+    "order_action": "Pedir",
+    "invite": "Invitar a registrarse",
+    "invite_sent": "Invitación enviada",
+    "invite_sent_desc": "Se ha enviado una invitación a {{email}}",
+    "invite_error": "No se pudo enviar la invitación",
+    "send_message": "Enviar un mensaje",
+    "log_error": "No se pudo añadir el registro",
+    "product_link_error": "No se pudo vincular el producto",
+    "product_unlink_error": "No se pudo desvincular el producto",
+    "supplier_no_phone_error": "Ningún proveedor vinculado a este producto"
+  },
   "bulk_import": {
     "title": "Importación CSV",
     "bulk_title": "Importación masiva",
@@ -128,5 +471,18 @@
     "field_purchase_price": "Precio de compra",
     "field_min_stock": "Stock mínimo",
     "field_description": "Descripción"
+  },
+  "modals": {
+    "cancel": "Cancelar",
+    "save": "Guardar",
+    "confirm": "Confirmar",
+    "close": "Cerrar",
+    "loading": "Cargando...",
+    "error": "Ha ocurrido un error",
+    "success": "Operación exitosa",
+    "delete_confirm": "¿Está seguro de que desea eliminar este elemento?",
+    "order_creation": "Creación de pedido",
+    "receipt": "Recibo Digital",
+    "chat": "Mensajes"
   }
 }
