--- a/frontend/locales/hi.json
+++ b/frontend/locales/hi.json
@@ -1,15 +1,437 @@
 {
     "common": {
-        "search": "...",
-        "filter": "...",
-        "loading": "...",
-        "cancel": "...",
-        "confirm": "...",
-        "save": "...",
-        "delete": "...",
-        "edit": "...",
-        "success": "...",
-        "error": "..."
+        "search": "खोजें",
+        "filter": "फ़िल्टर",
+        "loading": "लोड हो रहा है...",
+        "cancel": "रद्द करें",
+        "confirm": "पुष्टि करें",
+        "save": "सहेजें",
+        "delete": "हटाएं",
+        "edit": "संपादित करें",
+        "success": "सफल",
+        "error": "त्रुटि",
+        "language_choice": "भाषा चुनें",
+        "items_count": "{{count}} आइटम",
+        "my_shop": "मेरी दुकान",
+        "periods": {
+            "7d": "7दि",
+            "30d": "30दि",
+            "90d": "90दि",
+            "1y": "1वर्ष",
+            "custom": "कस्टम",
+            "from": "से",
+            "to": "तक",
+            "apply": "लागू करें"
+        }
+    },
+    "marketplace": {
+        "title": "मार्केटप्लेस",
+        "suppliers": "मार्केटप्लेस आपूर्तिकर्ता",
+        "products": "उत्पाद",
+        "search_supplier": "आपूर्तिकर्ता खोजें...",
+        "search_product": "उत्पाद खोजें...",
+        "city_filter": "शहर के अनुसार फ़िल्टर करें...",
+        "category": "श्रेणी",
+        "min_rating": "न्यूनतम रेटिंग",
+        "verified_only": "केवल सत्यापित",
+        "price_range": "मूल्य सीमा",
+        "min_price": "न्यूनतम",
+        "max_price": "अधिकतम",
+        "all": "सभी",
+        "star": "⭐",
+        "apply": "लागू करें",
+        "reset": "रीसेट करें",
+        "empty_suppliers": "कोई आपूर्तिकर्ता नहीं मिला",
+        "empty_products": "कोई उत्पाद नहीं मिला",
+        "modify_criteria": "अपने खोज मानदंड बदलें",
+        "filters": "फ़िल्टर",
+        "city": "शहर",
+        "send_invitation": "निमंत्रण भेजें",
+        "contact": "संपर्क करें"
+    },
+    "settings": {
+        "account": "खाता",
+        "application": "ऐप्लिकेशन",
+        "security": "सुरक्षा",
+        "about": "के बारे में",
+        "logout": "लॉग आउट",
+        "dark_mode": "डार्क मोड",
+        "simple_mode": "सरल मोड",
+        "notifications": "पुश नोटिफिकेशन",
+        "sync": "सिंक्रोनाइज़ेशन",
+        "team": "टीम प्रबंधन",
+        "modules": "सक्रिय मॉड्यूल",
+        "reminders": "रिमाइंडर नियम",
+        "version": "संस्करण",
+        "language": "भाषा",
+        "biometrics": "बायोमेट्रिक्स (फेस ID / फिंगरप्रिंट)",
+        "biometrics_desc": "बायोमेट्रिक पहचान का उपयोग करें",
+        "pin_required": "बायोमेट्रिक्स का उपयोग करने के लिए पहले पिन कोड सक्षम करें।"
+    },
+    "dashboard": {
+        "title": "डैशबोर्ड",
+        "greeting": "नमस्ते, {{name}}",
+        "sub_greeting": "यहां आपकी स्टॉक स्थिति है",
+        "today_revenue": "दैनिक राजस्व",
+        "today_sales": "दैनिक बिक्री",
+        "stock_value": "स्टॉक मूल्य",
+        "month_revenue": "मासिक बिक्री",
+        "stock_status": "स्टॉक स्थिति",
+        "out_of_stock": "स्टॉक समाप्त",
+        "low_stock": "कम स्टॉक",
+        "overstock": "अतिरिक्त स्टॉक",
+        "normal": "सामान्य",
+        "profitability_analysis": "लाभप्रदता विश्लेषण",
+        "recent_sales": "हालिया बिक्री",
+        "stock_evolution": "स्टॉक मूल्य विकास (7दि)",
+        "critical_products": "गंभीर उत्पाद",
+        "see_more": "और देखें",
+        "see_less": "कम देखें"
+    },
+    "products": {
+        "title": "उत्पाद",
+        "search": "उत्पाद खोजें...",
+        "add_product": "उत्पाद जोड़ें",
+        "products_total": "कुल उत्पाद",
+        "out_of_stock": "स्टॉक समाप्त",
+        "low_stock": "कम स्टॉक",
+        "overstock": "अतिरिक्त स्टॉक",
+        "normal": "सामान्य",
+        "history": "इतिहास",
+        "edit": "संपादन",
+        "add_stock": "+स्टॉक",
+        "remove_stock": "-स्टॉक",
+        "delete": "हटाएं",
+        "all": "सभी",
+        "catalog": "कैटलॉग"
+    },
+    "accounting": {
+        "title": "लेखांकन",
+        "revenue": "राजस्व",
+        "sales_count": "बिक्री संख्या",
+        "avg_basket": "औसत टोकरी",
+        "total_expenses": "कुल खर्च",
+        "expenses": "खर्च",
+        "reports": "रिपोर्ट",
+        "new_report": "नई रिपोर्ट",
+        "add_expense": "खर्च जोड़ें",
+        "payment_methods": "भुगतान विधि के अनुसार बिक्री",
+        "revenue_evolution": "राजस्व विकास",
+        "daily": "दैनिक",
+        "weekly": "साप्ताहिक",
+        "monthly": "मासिक",
+        "export_pdf": "PDF निर्यात",
+        "export_excel": "Excel निर्यात",
+        "empty_expenses": "कोई खर्च दर्ज नहीं",
+        "expense_name": "खर्च का नाम",
+        "amount": "राशि",
+        "category": "श्रेणी",
+        "date": "तारीख",
+        "expense_modal_title": "खर्च विवरण",
+        "expense_added": "खर्च सफलतापूर्वक सहेजा गया",
+        "confirm_delete_expense": "क्या आप वाकई इस खर्च को हटाना चाहते हैं?",
+        "top_products": "शीर्ष उत्पाद (मात्रा)",
+        "recent_sales": "हालिया बिक्री",
+        "balance": "शेष",
+        "profit": "लाभ",
+        "loss": "हानि",
+        "margin_on_sales": "सकल मार्जिन",
+        "margin_percentage": "मार्जिन: {{percentage}}%",
+        "revenue_info": "खर्चों से पहले कुल बिक्री राजस्व।",
+        "margin_on_sales_info": "बिक्री मूल्य और खरीद लागत के बीच का अंतर।",
+        "net_profit": "शुद्ध लाभ",
+        "net_profit_info": "सभी खर्चों को घटाने के बाद वास्तविक लाभ।",
+        "stock_value_purchase": "स्टॉक मूल्य (लागत)",
+        "stock_value_selling": "बिक्री मूल्य: {{value}}",
+        "losses": "हानि / नुकसान",
+        "loss_reasons": "{{count}} हानि कारण",
+        "items_sold": "बेचे गए आइटम",
+        "avg_sale": "औसत टोकरी: {{value}}",
+        "supplier_purchases": "आपूर्तिकर्ता खरीद",
+        "purchases_count": "{{count}} ऑर्डर",
+        "cost_cogs": "बिक्री लागत",
+        "gross_margin": "सकल मार्जिन",
+        "payment_cash": "नकद",
+        "payment_mobile_money": "मोबाइल मनी",
+        "payment_card": "कार्ड",
+        "payment_transfer": "ट्रांसफर",
+        "payment_credit": "ग्राहक क्रेडिट",
+        "see_other_expenses": "{{count}} और देखें",
+        "invalid_amount": "अमान्य राशि",
+        "save_error": "सहेजने में त्रुटि",
+        "delete_error": "हटाने में त्रुटि",
+        "confirm_expense": "{{amount}} का खर्च पुष्टि करें?",
+        "no_expenses": "कोई खर्च नहीं",
+        "expenses_categories": {
+            "rent": "किराया",
+            "salary": "वेतन",
+            "transport": "परिवहन",
+            "merchandise": "माल",
+            "electricity": "बिजली",
+            "water": "पानी",
+            "internet": "इंटरनेट",
+            "other": "अन्य"
+        },
+        "report_title": "गतिविधि रिपोर्ट",
+        "period_label": "अवधि:",
+        "top_products_title": "प्रदर्शन के अनुसार शीर्ष 10 उत्पाद",
+        "expenses_details_title": "खर्च विवरण",
+        "col_product": "उत्पाद",
+        "col_sold": "बेचा",
+        "col_revenue": "राजस्व",
+        "col_profit": "लाभ",
+        "col_category": "श्रेणी",
+        "col_description": "विवरण",
+        "col_amount": "राशि",
+        "generated_on": "{{date}} को Stockman द्वारा जनित",
+        "invoice_title": "चालान",
+        "recipient_label": "ग्राहक",
+        "invoice_ref": "संदर्भ",
+        "invoice_date": "तारीख",
+        "payment_method_label": "विधि",
+        "notes_label": "नोट्स"
+    },
+    "orders": {
+        "title": "ऑर्डर",
+        "suppliers": "आपूर्तिकर्ता",
+        "bulk": "बल्क ऑर्डर",
+        "returns": "वापसी और क्रेडिट",
+        "returns_credit_notes": "वापसी और क्रेडिट नोट",
+        "new_order": "नया ऑर्डर",
+        "validate_reception": "प्राप्ति की पुष्टि करें",
+        "all": "सभी",
+        "pending": "लंबित",
+        "confirmed": "पुष्टि",
+        "shipped": "शिप किया गया",
+        "shipping": "शिपिंग",
+        "received": "प्राप्त",
+        "delivered": "डिलीवर किया गया",
+        "cancelled": "रद्द",
+        "partially_delivered": "आंशिक रूप से डिलीवर",
+        "approved": "स्वीकृत",
+        "completed": "पूर्ण",
+        "rejected": "अस्वीकृत",
+        "empty": "कोई ऑर्डर नहीं मिला",
+        "details": "ऑर्डर विवरण",
+        "order_detail": "ऑर्डर विवरण",
+        "items_count": "{{count}} आइटम",
+        "total": "कुल",
+        "orders_count": "{{count}} ऑर्डर",
+        "returns_count": "{{count}} वापसी",
+        "all_suppliers": "सभी आपूर्तिकर्ता",
+        "active_credit_notes": "सक्रिय क्रेडिट नोट",
+        "credit_notes_count": "{{count}} क्रेडिट नोट",
+        "available": "उपलब्ध",
+        "no_returns": "कोई वापसी नहीं",
+        "no_returns_desc": "वापसी यहां दिखाई देगी",
+        "no_orders": "कोई ऑर्डर नहीं",
+        "no_orders_desc": "अपना पहला आपूर्तिकर्ता ऑर्डर बनाएं",
+        "no_orders_bulk_desc": "कोई बल्क ऑर्डर प्रगति में नहीं",
+        "supplier": "आपूर्तिकर्ता",
+        "customer": "ग्राहक",
+        "status": "स्थिति",
+        "dates": "तारीखें",
+        "created_at": "बनाया गया",
+        "updated_at": "अपडेट किया गया",
+        "expected_delivery": "अपेक्षित डिलीवरी",
+        "items": "आइटम",
+        "see_more_items": "{{count}} और आइटम देखें",
+        "rate_supplier": "आपूर्तिकर्ता को रेट करें",
+        "touch_star": "एक स्टार टच करें",
+        "history": "इतिहास",
+        "total_orders": "कुल {{count}} ऑर्डर",
+        "partial_delivery": "आंशिक डिलीवरी",
+        "enter_received_quantities": "प्राप्त मात्रा दर्ज करें",
+        "ordered": "ऑर्डर किया गया",
+        "already_received": "प्राप्त",
+        "partial_notes_placeholder": "उदा: क्षतिग्रस्त पैकेज...",
+        "complete_return_generate_credit_note": "वापसी पूरी करें और क्रेडिट नोट बनाएं",
+        "new_return": "नई वापसी",
+        "return_type": "वापसी का प्रकार",
+        "items_to_return": "वापस करने के आइटम",
+        "reason": "कारण",
+        "reason_placeholder": "दोष...",
+        "add_product_placeholder": "उत्पाद जोड़ें...",
+        "return_notes_placeholder": "वापसी का कारण...",
+        "total_return": "कुल वापसी",
+        "create_return": "वापसी बनाएं",
+        "confirm_advance_status": "{{nextStatus}} में स्थिति बदलने की पुष्टि करें?",
+        "advance_status": "स्थिति परिवर्तन की पुष्टि",
+        "update_error": "स्थिति अपडेट करने में त्रुटि",
+        "confirm_cancel": "क्या आप वाकई रद्द करना चाहते हैं?",
+        "cancel_order": "ऑर्डर रद्द करें",
+        "cancel_error": "ऑर्डर रद्द करने में त्रुटि",
+        "pdf_error": "PDF बनाने में त्रुटि",
+        "confirm_partial_delivery": "आंशिक डिलीवरी की पुष्टि करें? स्टॉक अपडेट होगा।",
+        "add_at_least_one_item": "कम से कम एक आइटम जोड़ें",
+        "return_created_success": "वापसी सफलतापूर्वक बनाई गई",
+        "create_return_error": "वापसी नहीं बनाई जा सकी",
+        "store_config_missing": "स्टोर कॉन्फ़िगरेशन गायब है",
+        "return_completed_credit_note_generated": "वापसी पूर्ण और क्रेडिट नोट बनाया गया",
+        "complete_return_error": "वापसी पूरी नहीं हो सकी",
+        "confirm_complete_return": "वापसी पूर्ण करने की पुष्टि करें?",
+        "confirmation": "पुष्टि",
+        "return_detail": "वापसी विवरण",
+        "customer_return": "ग्राहक वापसी",
+        "supplier_return": "आपूर्तिकर्ता वापसी",
+        "returned_items": "वापस किए गए आइटम",
+        "credit_note_generated": "क्रेडिट नोट बनाया गया",
+        "related_order": "संबंधित ऑर्डर",
+        "confirm_receipt": "प्राप्ति की पुष्टि करें"
+    },
+    "crm": {
+        "title": "CRM और लॉयल्टी",
+        "total_spent": "कुल बिक्री",
+        "active_clients": "सक्रिय (30दि)",
+        "loyalty_strategy": "लॉयल्टी रणनीति",
+        "points": "लॉयल्टी पॉइंट्स",
+        "reward_threshold": "पुरस्कार सीमा",
+        "marketing": "मार्केटिंग",
+        "whatsapp_campaign": "WhatsApp अभियान",
+        "search_placeholder": "ग्राहक खोजें...",
+        "add_customer": "नया ग्राहक",
+        "tier_bronze": "कांस्य",
+        "tier_silver": "रजत",
+        "tier_gold": "स्वर्ण",
+        "tier_platinum": "प्लेटिनम",
+        "debt": "ऋण",
+        "last_purchase": "अंतिम खरीदारी"
+    },
+    "pos": {
+        "title": "पॉइंट ऑफ सेल",
+        "search_placeholder": "उत्पाद खोजें...",
+        "cart": "कार्ट",
+        "empty_cart": "कार्ट खाली है",
+        "clear": "खाली करें",
+        "checkout": "चेकआउट",
+        "cash": "नकद",
+        "mobile_money": "मोबाइल मनी",
+        "credit": "उधार बिक्री",
+        "insufficient_stock": "अपर्याप्त स्टॉक",
+        "success": "बिक्री दर्ज की गई"
+    },
+    "supplier": {
+        "dashboard": "आपूर्तिकर्ता डैशबोर्ड",
+        "catalog": "मेरा कैटलॉग",
+        "orders": "प्राप्त ऑर्डर",
+        "pending_orders": "लंबित ऑर्डर",
+        "revenue_month": "इस महीने का राजस्व",
+        "avg_order": "औसत ऑर्डर",
+        "active_clients": "सक्रिय ग्राहक",
+        "reviews": "ग्राहक समीक्षाएं",
+        "top_products": "शीर्ष उत्पाद",
+        "accept": "स्वीकार करें",
+        "refuse": "अस्वीकार करें",
+        "ship": "शिप करें",
+        "min_order": "न्यूनतम ऑर्डर",
+        "available": "उपलब्ध",
+        "unavailable": "अनुपलब्ध",
+        "categories": "श्रेणियां",
+        "delivery_zones": "डिलीवरी क्षेत्र"
+    },
+    "suppliers": {
+        "title": "आपूर्तिकर्ता",
+        "subtitle": "अपने संपर्कों और ऑर्डर प्रबंधित करें",
+        "my_suppliers": "मेरे आपूर्तिकर्ता",
+        "marketplace": "मार्केटप्लेस",
+        "search_placeholder": "नाम, संपर्क, उत्पाद, फ़ोन...",
+        "sort_by": "क्रमबद्ध करें",
+        "sort_name": "नाम A-Z",
+        "sort_recent": "हालिया",
+        "sort_delay": "डिलीवरी समय",
+        "filter_by": "फ़िल्टर",
+        "with_phone": "फ़ोन के साथ",
+        "with_email": "ईमेल के साथ",
+        "reset_filters": "फ़िल्टर रीसेट करें",
+        "ai_suggestions": "पुनःपूर्ति सुझाव (AI)",
+        "no_results": "कोई परिणाम नहीं",
+        "no_suppliers": "कोई आपूर्तिकर्ता नहीं",
+        "add_suppliers_hint": "अपने नियमित आपूर्तिकर्ता जोड़ें",
+        "supplier_count": "{{count}} आपूर्तिकर्ता",
+        "supplier_search_count": "\"{{search}}\" के लिए {{count}} आपूर्तिकर्ता",
+        "critical_alert": "गंभीर",
+        "alert": "चेतावनी",
+        "suggestion_order_title": "ऑर्डर सुझाव",
+        "suggestion_order_desc": "{{product}}: वर्तमान स्टॉक {{current}}। सुझाव: {{supplier}} से {{suggested}} यूनिट ऑर्डर करें।",
+        "later": "बाद में",
+        "draft_success": "ऑर्डर ड्राफ्ट सफलतापूर्वक बनाया गया",
+        "call": "कॉल",
+        "visit": "विज़िट",
+        "other": "अन्य",
+        "whatsapp_log": "ऐप से WhatsApp वार्तालाप शुरू किया गया",
+        "delete_title": "आपूर्तिकर्ता हटाएं",
+        "delete_confirm": "क्या आप वाकई \"{{name}}\" को हटाना चाहते हैं?",
+        "save_error": "आपूर्तिकर्ता सहेजा नहीं जा सका",
+        "delete_error": "हटा नहीं सकते",
+        "linked_products": "लिंक किए गए उत्पाद ({{count}})",
+        "link_product": "उत्पाद लिंक करें",
+        "no_linked_products": "इस आपूर्तिकर्ता से कोई उत्पाद लिंक नहीं",
+        "link_hint": "कीमतों को ट्रैक करने और ऑर्डर सुविधाजनक बनाने के लिए अपने उत्पादों को लिंक करें",
+        "stock_value": "स्टॉक मूल्य",
+        "low_stock_count": "{{count}} उत्पाद",
+        "in_stock": "स्टॉक में",
+        "supplier_price": "आपूर्तिकर्ता मूल्य",
+        "selling_price": "बिक्री मूल्य",
+        "unlink": "अनलिंक करें",
+        "order_history": "ऑर्डर इतिहास",
+        "no_orders": "कोई ऑर्डर नहीं दिया गया",
+        "invoices_safe": "चालान सुरक्षित",
+        "add_invoice_feature": "अपलोड सुविधा जल्द आ रही है",
+        "no_invoices": "कोई चालान दर्ज नहीं",
+        "add_note": "नोट जोड़ें",
+        "log_placeholder": "इंटरैक्शन विवरण...",
+        "interaction_log": "इंटरैक्शन लॉग",
+        "no_logs": "कोई इंटरैक्शन इतिहास नहीं",
+        "financial_summary": "वित्तीय सारांश",
+        "total_volume": "कुल भुगतान राशि",
+        "pending_payment": "लंबित भुगतान",
+        "key_indicators": "प्रमुख संकेतक",
+        "avg_delivery_time": "औसत डिलीवरी समय",
+        "successful_deliveries": "सफल डिलीवरी",
+        "reliable_supplier": "यह आपूर्तिकर्ता समय पर बहुत विश्वसनीय है।",
+        "warning_supplier": "अपने ऑर्डर के लिए सुरक्षा मार्जिन रखें।",
+        "select_product": "उत्पाद चुनें:",
+        "no_products_available": "कोई उत्पाद उपलब्ध नहीं",
+        "link": "लिंक करें",
+        "edit_supplier": "आपूर्तिकर्ता संपादित करें",
+        "new_supplier": "नया आपूर्तिकर्ता",
+        "form_name": "नाम *",
+        "form_name_placeholder": "व्यापार का नाम",
+        "form_contact": "संपर्क",
+        "form_contact_placeholder": "संपर्क नाम",
+        "form_phone": "फ़ोन",
+        "form_phone_placeholder": "+91 XXXXX XXXXX",
+        "form_email": "ईमेल",
+        "form_email_placeholder": "email@udaharan.com",
+        "form_address": "पता",
+        "form_address_placeholder": "स्थान",
+        "form_products": "आपूर्ति किए गए उत्पाद",
+        "form_products_placeholder": "चावल, तेल, चीनी...",
+        "form_delay": "डिलीवरी समय",
+        "form_delay_placeholder": "उदा: 2-3 दिन",
+        "form_payment": "भुगतान शर्तें",
+        "form_payment_placeholder": "उदा: डिलीवरी पर",
+        "form_notes": "नोट्स",
+        "form_notes_placeholder": "टिप्पणियां...",
+        "payment_label": "भुगतान",
+        "low_stock_label": "कम स्टॉक",
+        "out_of_stock": "स्टॉक समाप्त",
+        "low_stock": "कम स्टॉक",
+        "stock": "स्टॉक",
+        "status_paid": "भुगतान किया",
+        "status_unpaid": "अभुगतान",
+        "phone_missing": "फ़ोन नंबर गायब है",
+        "whatsapp_not_installed": "इस डिवाइस पर WhatsApp इंस्टॉल नहीं है",
+        "order_action": "ऑर्डर",
+        "invite": "शामिल होने का निमंत्रण",
+        "invite_sent": "निमंत्रण भेजा गया",
+        "invite_sent_desc": "{{email}} पर एक निमंत्रण भेजा गया है",
+        "invite_error": "निमंत्रण नहीं भेजा जा सका",
+        "send_message": "संदेश भेजें",
+        "log_error": "लॉग नहीं जोड़ा जा सका",
+        "product_link_error": "उत्पाद लिंक नहीं हो सका",
+        "product_unlink_error": "उत्पाद अनलिंक नहीं हो सका",
+        "supplier_no_phone_error": "इस उत्पाद से कोई आपूर्तिकर्ता लिंक नहीं"
     },
     "bulk_import": {
         "title": "CSV आयात",
@@ -49,5 +471,18 @@
         "field_purchase_price": "खरीद मूल्य",
         "field_min_stock": "न्यूनतम स्टॉक",
         "field_description": "विवरण"
+    },
+    "modals": {
+        "cancel": "रद्द करें",
+        "save": "सहेजें",
+        "confirm": "पुष्टि करें",
+        "close": "बंद करें",
+        "loading": "लोड हो रहा है...",
+        "error": "एक त्रुटि हुई",
+        "success": "ऑपरेशन सफल",
+        "delete_confirm": "क्या आप वाकई इस आइटम को हटाना चाहते हैं?",
+        "order_creation": "ऑर्डर बनाएं",
+        "receipt": "डिजिटल रसीद",
+        "chat": "संदेश"
     }
 }
