--- a/frontend/locales/pl.json
+++ b/frontend/locales/pl.json
@@ -1,15 +1,437 @@
 {
     "common": {
-        "search": "...",
-        "filter": "...",
-        "loading": "...",
-        "cancel": "...",
-        "confirm": "...",
-        "save": "...",
-        "delete": "...",
-        "edit": "...",
-        "success": "...",
-        "error": "..."
+        "search": "Szukaj",
+        "filter": "Filtr",
+        "loading": "Ładowanie...",
+        "cancel": "Anuluj",
+        "confirm": "Potwierdź",
+        "save": "Zapisz",
+        "delete": "Usuń",
+        "edit": "Edytuj",
+        "success": "Sukces",
+        "error": "Błąd",
+        "language_choice": "Wybierz język",
+        "items_count": "{{count}} element(ów)",
+        "my_shop": "Mój sklep",
+        "periods": {
+            "7d": "7d",
+            "30d": "30d",
+            "90d": "90d",
+            "1y": "1r",
+            "custom": "Własny",
+            "from": "Od",
+            "to": "do",
+            "apply": "Zastosuj"
+        }
+    },
+    "marketplace": {
+        "title": "Marketplace",
+        "suppliers": "Dostawcy z Marketplace",
+        "products": "Produkty",
+        "search_supplier": "Szukaj dostawcy...",
+        "search_product": "Szukaj produktu...",
+        "city_filter": "Filtruj po mieście...",
+        "category": "Kategoria",
+        "min_rating": "Minimalna ocena",
+        "verified_only": "Tylko zweryfikowani",
+        "price_range": "Zakres cenowy",
+        "min_price": "Min",
+        "max_price": "Maks",
+        "all": "Wszystko",
+        "star": "⭐",
+        "apply": "Zastosuj",
+        "reset": "Resetuj",
+        "empty_suppliers": "Nie znaleziono dostawców",
+        "empty_products": "Nie znaleziono produktów",
+        "modify_criteria": "Zmień kryteria wyszukiwania",
+        "filters": "Filtry",
+        "city": "Miasto",
+        "send_invitation": "Wyślij zaproszenie",
+        "contact": "Kontakt"
+    },
+    "settings": {
+        "account": "Konto",
+        "application": "Aplikacja",
+        "security": "Bezpieczeństwo",
+        "about": "O aplikacji",
+        "logout": "Wyloguj",
+        "dark_mode": "Tryb ciemny",
+        "simple_mode": "Tryb uproszczony",
+        "notifications": "Powiadomienia push",
+        "sync": "Synchronizacja",
+        "team": "Zarządzanie zespołem",
+        "modules": "Aktywne moduły",
+        "reminders": "Reguły przypomnień",
+        "version": "Wersja",
+        "language": "Język",
+        "biometrics": "Biometria (Face ID / Odcisk palca)",
+        "biometrics_desc": "Używaj rozpoznawania biometrycznego",
+        "pin_required": "Najpierw włącz kod PIN, aby korzystać z biometrii."
+    },
+    "dashboard": {
+        "title": "Panel główny",
+        "greeting": "Witaj, {{name}}",
+        "sub_greeting": "Oto stan Twoich zapasów",
+        "today_revenue": "Dzienny przychód",
+        "today_sales": "Dzienne sprzedaże",
+        "stock_value": "Wartość zapasów",
+        "month_revenue": "Sprzedaż miesięczna",
+        "stock_status": "Stan zapasów",
+        "out_of_stock": "Brak w magazynie",
+        "low_stock": "Niski stan",
+        "overstock": "Nadmiar",
+        "normal": "Normalny",
+        "profitability_analysis": "Analiza rentowności",
+        "recent_sales": "Ostatnie sprzedaże",
+        "stock_evolution": "Ewolucja wartości zapasów (7d)",
+        "critical_products": "Produkty krytyczne",
+        "see_more": "Pokaż więcej",
+        "see_less": "Pokaż mniej"
+    },
+    "products": {
+        "title": "Produkty",
+        "search": "Szukaj produktu...",
+        "add_product": "Dodaj produkt",
+        "products_total": "produktów łącznie",
+        "out_of_stock": "Brak w magazynie",
+        "low_stock": "Niski stan",
+        "overstock": "Nadmiar",
+        "normal": "Normalny",
+        "history": "Hist.",
+        "edit": "Edytuj",
+        "add_stock": "+Zapas",
+        "remove_stock": "-Zapas",
+        "delete": "Usuń",
+        "all": "Wszystko",
+        "catalog": "Katalog"
+    },
+    "accounting": {
+        "title": "Księgowość",
+        "revenue": "Przychód",
+        "sales_count": "Liczba sprzedaży",
+        "avg_basket": "Średni koszyk",
+        "total_expenses": "Wydatki ogółem",
+        "expenses": "Wydatki",
+        "reports": "Raporty",
+        "new_report": "Nowy raport",
+        "add_expense": "Dodaj wydatek",
+        "payment_methods": "Sprzedaż wg metody płatności",
+        "revenue_evolution": "Ewolucja przychodów",
+        "daily": "Dziennie",
+        "weekly": "Tygodniowo",
+        "monthly": "Miesięcznie",
+        "export_pdf": "Eksport PDF",
+        "export_excel": "Eksport Excel",
+        "empty_expenses": "Brak zarejestrowanych wydatków",
+        "expense_name": "Nazwa wydatku",
+        "amount": "Kwota",
+        "category": "Kategoria",
+        "date": "Data",
+        "expense_modal_title": "Szczegóły wydatku",
+        "expense_added": "Wydatek zapisany pomyślnie",
+        "confirm_delete_expense": "Czy na pewno chcesz usunąć ten wydatek?",
+        "top_products": "Najlepsze produkty (wolumen)",
+        "recent_sales": "Ostatnie sprzedaże",
+        "balance": "Saldo",
+        "profit": "Zysk",
+        "loss": "Strata",
+        "margin_on_sales": "Marża brutto",
+        "margin_percentage": "Marża: {{percentage}}%",
+        "revenue_info": "Całkowity przychód ze sprzedaży przed odliczeniem wydatków.",
+        "margin_on_sales_info": "Różnica między ceną sprzedaży a kosztem zakupu.",
+        "net_profit": "Zysk netto",
+        "net_profit_info": "Rzeczywisty zysk po odliczeniu wszystkich wydatków.",
+        "stock_value_purchase": "Wartość zapasów (koszt)",
+        "stock_value_selling": "Wartość sprzedaży: {{value}}",
+        "losses": "Straty / Uszkodzenia",
+        "loss_reasons": "{{count}} przyczyn(a) strat",
+        "items_sold": "Sprzedanych sztuk",
+        "avg_sale": "Średni koszyk: {{value}}",
+        "supplier_purchases": "Zakupy od dostawców",
+        "purchases_count": "{{count}} zamówień(e)",
+        "cost_cogs": "Koszt własny",
+        "gross_margin": "Marża brutto",
+        "payment_cash": "Gotówka",
+        "payment_mobile_money": "Pieniądz mobilny",
+        "payment_card": "Karta",
+        "payment_transfer": "Przelew",
+        "payment_credit": "Kredyt klienta",
+        "see_other_expenses": "Pokaż jeszcze {{count}}",
+        "invalid_amount": "Nieprawidłowa kwota",
+        "save_error": "Błąd zapisu",
+        "delete_error": "Błąd usuwania",
+        "confirm_expense": "Potwierdzić wydatek na {{amount}}?",
+        "no_expenses": "Brak wydatków",
+        "expenses_categories": {
+            "rent": "Czynsz",
+            "salary": "Wynagrodzenie",
+            "transport": "Transport",
+            "merchandise": "Towar",
+            "electricity": "Elektryczność",
+            "water": "Woda",
+            "internet": "Internet",
+            "other": "Inne"
+        },
+        "report_title": "RAPORT DZIAŁALNOŚCI",
+        "period_label": "Okres:",
+        "top_products_title": "Top 10 produktów wg wyników",
+        "expenses_details_title": "Szczegóły wydatków",
+        "col_product": "Produkt",
+        "col_sold": "Sprzedano",
+        "col_revenue": "Przychód",
+        "col_profit": "Zysk",
+        "col_category": "Kategoria",
+        "col_description": "Opis",
+        "col_amount": "Kwota",
+        "generated_on": "Wygenerowano {{date}} przez Stockman",
+        "invoice_title": "FAKTURA",
+        "recipient_label": "Klient",
+        "invoice_ref": "Nr ref.",
+        "invoice_date": "Data",
+        "payment_method_label": "Metoda",
+        "notes_label": "Uwagi"
+    },
+    "orders": {
+        "title": "Zamówienia",
+        "suppliers": "Dostawcy",
+        "bulk": "Zamówienia hurtowe",
+        "returns": "Zwroty i kredyt",
+        "returns_credit_notes": "Zwroty i noty kredytowe",
+        "new_order": "Nowe zamówienie",
+        "validate_reception": "Potwierdź odbiór",
+        "all": "Wszystko",
+        "pending": "Oczekujące",
+        "confirmed": "Potwierdzone",
+        "shipped": "Wysłane",
+        "shipping": "Wysyłka",
+        "received": "Odebrane",
+        "delivered": "Dostarczone",
+        "cancelled": "Anulowane",
+        "partially_delivered": "Częściowo dostarczone",
+        "approved": "Zatwierdzone",
+        "completed": "Zakończone",
+        "rejected": "Odrzucone",
+        "empty": "Nie znaleziono zamówień",
+        "details": "Szczegóły zamówienia",
+        "order_detail": "Szczegóły zamówienia",
+        "items_count": "{{count}} pozycja(e)",
+        "total": "Razem",
+        "orders_count": "{{count}} zamówień(e)",
+        "returns_count": "{{count}} zwrot(ów)",
+        "all_suppliers": "Wszyscy dostawcy",
+        "active_credit_notes": "Aktywne noty kredytowe",
+        "credit_notes_count": "{{count}} nota(y) kredytowa(e)",
+        "available": "Dostępne",
+        "no_returns": "Brak zwrotów",
+        "no_returns_desc": "Zwroty pojawią się tutaj",
+        "no_orders": "Brak zamówień",
+        "no_orders_desc": "Utwórz swoje pierwsze zamówienie u dostawcy",
+        "no_orders_bulk_desc": "Brak zamówień hurtowych w toku",
+        "supplier": "Dostawca",
+        "customer": "Klient",
+        "status": "Status",
+        "dates": "Daty",
+        "created_at": "Utworzono",
+        "updated_at": "Zaktualizowano",
+        "expected_delivery": "Oczekiwana dostawa",
+        "items": "Pozycje",
+        "see_more_items": "Pokaż jeszcze {{count}} pozycji",
+        "rate_supplier": "Oceń dostawcę",
+        "touch_star": "Dotknij gwiazdkę",
+        "history": "Historia",
+        "total_orders": "{{count}} zamówień łącznie",
+        "partial_delivery": "Częściowa dostawa",
+        "enter_received_quantities": "Wprowadź odebrane ilości",
+        "ordered": "Zamówiono",
+        "already_received": "Odebrano",
+        "partial_notes_placeholder": "Np.: Uszkodzona paczka...",
+        "complete_return_generate_credit_note": "Zakończ zwrot i wygeneruj notę kredytową",
+        "new_return": "Nowy zwrot",
+        "return_type": "Typ zwrotu",
+        "items_to_return": "Produkty do zwrotu",
+        "reason": "Powód",
+        "reason_placeholder": "Wada...",
+        "add_product_placeholder": "Dodaj produkt...",
+        "return_notes_placeholder": "Powód zwrotu...",
+        "total_return": "Kwota zwrotu",
+        "create_return": "Utwórz zwrot",
+        "confirm_advance_status": "Potwierdzić zmianę statusu na {{nextStatus}}?",
+        "advance_status": "Potwierdź zmianę statusu",
+        "update_error": "Błąd aktualizacji statusu",
+        "confirm_cancel": "Czy na pewno chcesz anulować?",
+        "cancel_order": "Anuluj zamówienie",
+        "cancel_error": "Błąd anulowania zamówienia",
+        "pdf_error": "Błąd generowania PDF",
+        "confirm_partial_delivery": "Potwierdzić częściową dostawę? Zapasy zostaną zaktualizowane.",
+        "add_at_least_one_item": "Dodaj przynajmniej jedną pozycję",
+        "return_created_success": "Zwrot utworzony pomyślnie",
+        "create_return_error": "Nie udało się utworzyć zwrotu",
+        "store_config_missing": "Brak konfiguracji sklepu",
+        "return_completed_credit_note_generated": "Zwrot zakończony i nota kredytowa wygenerowana",
+        "complete_return_error": "Nie udało się zakończyć zwrotu",
+        "confirm_complete_return": "Potwierdzić zakończenie zwrotu?",
+        "confirmation": "Potwierdzenie",
+        "return_detail": "Szczegóły zwrotu",
+        "customer_return": "Zwrot od klienta",
+        "supplier_return": "Zwrot do dostawcy",
+        "returned_items": "Zwrócone produkty",
+        "credit_note_generated": "Nota kredytowa wygenerowana",
+        "related_order": "Powiązane zamówienie",
+        "confirm_receipt": "Potwierdź odbiór"
+    },
+    "crm": {
+        "title": "CRM i lojalność",
+        "total_spent": "Sprzedaż ogółem",
+        "active_clients": "Aktywni (30d)",
+        "loyalty_strategy": "Strategia lojalnościowa",
+        "points": "Punkty lojalnościowe",
+        "reward_threshold": "Próg nagrody",
+        "marketing": "Marketing",
+        "whatsapp_campaign": "Kampania WhatsApp",
+        "search_placeholder": "Szukaj klienta...",
+        "add_customer": "Nowy klient",
+        "tier_bronze": "Brąz",
+        "tier_silver": "Srebro",
+        "tier_gold": "Złoto",
+        "tier_platinum": "Platyna",
+        "debt": "Zadłużenie",
+        "last_purchase": "Ostatni zakup"
+    },
+    "pos": {
+        "title": "Punkt sprzedaży",
+        "search_placeholder": "Szukaj produktu...",
+        "cart": "Koszyk",
+        "empty_cart": "Koszyk jest pusty",
+        "clear": "Wyczyść",
+        "checkout": "Zapłać",
+        "cash": "Gotówka",
+        "mobile_money": "Pieniądz mobilny",
+        "credit": "Sprzedaż na kredyt",
+        "insufficient_stock": "Niewystarczający zapas",
+        "success": "Sprzedaż zarejestrowana"
+    },
+    "supplier": {
+        "dashboard": "Panel dostawcy",
+        "catalog": "Mój katalog",
+        "orders": "Otrzymane zamówienia",
+        "pending_orders": "Zamówienia oczekujące",
+        "revenue_month": "Przychód w tym miesiącu",
+        "avg_order": "Średnie zamówienie",
+        "active_clients": "Aktywni klienci",
+        "reviews": "Opinie klientów",
+        "top_products": "Najlepsze produkty",
+        "accept": "Akceptuj",
+        "refuse": "Odrzuć",
+        "ship": "Wyślij",
+        "min_order": "Min. zamówienie",
+        "available": "Dostępny",
+        "unavailable": "Niedostępny",
+        "categories": "Kategorie",
+        "delivery_zones": "Strefy dostawy"
+    },
+    "suppliers": {
+        "title": "Dostawcy",
+        "subtitle": "Zarządzaj kontaktami i zamówieniami",
+        "my_suppliers": "Moi dostawcy",
+        "marketplace": "Marketplace",
+        "search_placeholder": "Nazwa, kontakt, produkt, telefon...",
+        "sort_by": "Sortuj wg",
+        "sort_name": "Nazwa A-Z",
+        "sort_recent": "Ostatnie",
+        "sort_delay": "Czas dostawy",
+        "filter_by": "Filtruj",
+        "with_phone": "Z telefonem",
+        "with_email": "Z e-mailem",
+        "reset_filters": "Resetuj filtry",
+        "ai_suggestions": "Sugestie uzupełnienia (AI)",
+        "no_results": "Brak wyników",
+        "no_suppliers": "Brak dostawców",
+        "add_suppliers_hint": "Dodaj swoich stałych dostawców",
+        "supplier_count": "{{count}} dostawca(ów)",
+        "supplier_search_count": "{{count}} dostawca(ów) dla \"{{search}}\"",
+        "critical_alert": "KRYTYCZNE",
+        "alert": "Alert",
+        "suggestion_order_title": "Sugestia zamówienia",
+        "suggestion_order_desc": "{{product}}: Aktualny zapas {{current}}. Sugestia: zamów {{suggested}} szt. od {{supplier}}.",
+        "later": "Później",
+        "draft_success": "Szkic zamówienia utworzony",
+        "call": "Zadzwoń",
+        "visit": "Wizyta",
+        "other": "Inne",
+        "whatsapp_log": "Rozmowa WhatsApp rozpoczęta z aplikacji",
+        "delete_title": "Usuń dostawcę",
+        "delete_confirm": "Czy na pewno chcesz usunąć \"{{name}}\"?",
+        "save_error": "Nie udało się zapisać dostawcy",
+        "delete_error": "Nie udało się usunąć",
+        "linked_products": "Powiązane produkty ({{count}})",
+        "link_product": "Powiąż produkt",
+        "no_linked_products": "Brak produktów powiązanych z tym dostawcą",
+        "link_hint": "Powiąż produkty, aby śledzić ceny i ułatwić zamawianie",
+        "stock_value": "Wartość zapasów",
+        "low_stock_count": "{{count}} produkt(ów)",
+        "in_stock": "W magazynie",
+        "supplier_price": "Cena dostawcy",
+        "selling_price": "Cena sprzedaży",
+        "unlink": "Odłącz",
+        "order_history": "Historia zamówień",
+        "no_orders": "Brak złożonych zamówień",
+        "invoices_safe": "Sejf faktur",
+        "add_invoice_feature": "Funkcja przesyłania wkrótce dostępna",
+        "no_invoices": "Brak zarejestrowanych faktur",
+        "add_note": "Dodaj notatkę",
+        "log_placeholder": "Szczegóły interakcji...",
+        "interaction_log": "Dziennik interakcji",
+        "no_logs": "Brak historii interakcji",
+        "financial_summary": "Podsumowanie finansowe",
+        "total_volume": "Łączny wolumen płatności",
+        "pending_payment": "Oczekująca płatność",
+        "key_indicators": "Kluczowe wskaźniki",
+        "avg_delivery_time": "Średni czas dostawy",
+        "successful_deliveries": "Udane dostawy",
+        "reliable_supplier": "Ten dostawca jest bardzo solidny w terminach.",
+        "warning_supplier": "Uwzględnij margines bezpieczeństwa dla zamówień.",
+        "select_product": "Wybierz produkt:",
+        "no_products_available": "Brak dostępnych produktów",
+        "link": "Powiąż",
+        "edit_supplier": "Edytuj dostawcę",
+        "new_supplier": "Nowy dostawca",
+        "form_name": "Nazwa *",
+        "form_name_placeholder": "Nazwa firmy",
+        "form_contact": "Kontakt",
+        "form_contact_placeholder": "Osoba kontaktowa",
+        "form_phone": "Telefon",
+        "form_phone_placeholder": "+48 XX XXX XX XX",
+        "form_email": "E-mail",
+        "form_email_placeholder": "email@przyklad.pl",
+        "form_address": "Adres",
+        "form_address_placeholder": "Lokalizacja",
+        "form_products": "Dostarczane produkty",
+        "form_products_placeholder": "Ryż, olej, cukier...",
+        "form_delay": "Czas dostawy",
+        "form_delay_placeholder": "Np.: 2-3 dni",
+        "form_payment": "Warunki płatności",
+        "form_payment_placeholder": "Np.: Przy dostawie",
+        "form_notes": "Notatki",
+        "form_notes_placeholder": "Uwagi...",
+        "payment_label": "Płatność",
+        "low_stock_label": "Niski stan",
+        "out_of_stock": "Brak w magazynie",
+        "low_stock": "Niski stan",
+        "stock": "Zapas",
+        "status_paid": "Opłacone",
+        "status_unpaid": "Nieopłacone",
+        "phone_missing": "Brak numeru telefonu",
+        "whatsapp_not_installed": "WhatsApp nie jest zainstalowany na tym urządzeniu",
+        "order_action": "Zamów",
+        "invite": "Zaproś do dołączenia",
+        "invite_sent": "Zaproszenie wysłane",
+        "invite_sent_desc": "Zaproszenie zostało wysłane na {{email}}",
+        "invite_error": "Nie udało się wysłać zaproszenia",
+        "send_message": "Wyślij wiadomość",
+        "log_error": "Nie udało się dodać wpisu",
+        "product_link_error": "Nie udało się powiązać produktu",
+        "product_unlink_error": "Nie udało się odłączyć produktu",
+        "supplier_no_phone_error": "Brak dostawcy powiązanego z tym produktem"
     },
     "bulk_import": {
         "title": "Import CSV",
@@ -49,5 +471,18 @@
         "field_purchase_price": "Cena zakupu",
         "field_min_stock": "Minimalny stan",
         "field_description": "Opis"
+    },
+    "modals": {
+        "cancel": "Anuluj",
+        "save": "Zapisz",
+        "confirm": "Potwierdź",
+        "close": "Zamknij",
+        "loading": "Ładowanie...",
+        "error": "Wystąpił błąd",
+        "success": "Operacja zakończona pomyślnie",
+        "delete_confirm": "Czy na pewno chcesz usunąć ten element?",
+        "order_creation": "Tworzenie zamówienia",
+        "receipt": "Paragon cyfrowy",
+        "chat": "Wiadomości"
     }
 }
