--- a/frontend/locales/pt.json
+++ b/frontend/locales/pt.json
@@ -1,15 +1,437 @@
 {
   "common": {
-    "search": "...",
-    "filter": "...",
-    "loading": "...",
-    "cancel": "...",
-    "confirm": "...",
-    "save": "...",
-    "delete": "...",
-    "edit": "...",
-    "success": "...",
-    "error": "..."
+    "search": "Pesquisar",
+    "filter": "Filtrar",
+    "loading": "A carregar...",
+    "cancel": "Cancelar",
+    "confirm": "Confirmar",
+    "save": "Guardar",
+    "delete": "Eliminar",
+    "edit": "Editar",
+    "success": "Sucesso",
+    "error": "Erro",
+    "language_choice": "Escolher idioma",
+    "items_count": "{{count}} artigo(s)",
+    "my_shop": "A minha Loja",
+    "periods": {
+      "7d": "7d",
+      "30d": "30d",
+      "90d": "90d",
+      "1y": "1a",
+      "custom": "Personalizado",
+      "from": "De",
+      "to": "a",
+      "apply": "Aplicar"
+    }
+  },
+  "marketplace": {
+    "title": "Marketplace",
+    "suppliers": "Fornecedores Marketplace",
+    "products": "Produtos",
+    "search_supplier": "Pesquisar um fornecedor...",
+    "search_product": "Pesquisar um produto...",
+    "city_filter": "Filtrar por cidade...",
+    "category": "Categoria",
+    "min_rating": "Classificação mínima",
+    "verified_only": "Apenas verificados",
+    "price_range": "Faixa de preço",
+    "min_price": "Mín",
+    "max_price": "Máx",
+    "all": "Todos",
+    "star": "⭐",
+    "apply": "Aplicar",
+    "reset": "Reiniciar",
+    "empty_suppliers": "Nenhum fornecedor encontrado",
+    "empty_products": "Nenhum produto encontrado",
+    "modify_criteria": "Modifique os seus critérios de pesquisa",
+    "filters": "Filtros",
+    "city": "Cidade",
+    "send_invitation": "Enviar convite",
+    "contact": "Contactar"
+  },
+  "settings": {
+    "account": "Conta",
+    "application": "Aplicação",
+    "security": "Segurança",
+    "about": "Sobre",
+    "logout": "Terminar sessão",
+    "dark_mode": "Modo escuro",
+    "simple_mode": "Modo simplificado",
+    "notifications": "Notificações push",
+    "sync": "Sincronização",
+    "team": "Gestão de equipa",
+    "modules": "Módulos ativos",
+    "reminders": "Regras de lembrete",
+    "version": "Versão",
+    "language": "Idioma",
+    "biometrics": "Biometria (Face ID / Impressão digital)",
+    "biometrics_desc": "Usar reconhecimento biométrico",
+    "pin_required": "Ative primeiro o código PIN para usar a biometria."
+  },
+  "dashboard": {
+    "title": "Painel de controlo",
+    "greeting": "Olá, {{name}}",
+    "sub_greeting": "Aqui está o estado do seu stock",
+    "today_revenue": "Receita do dia",
+    "today_sales": "Vendas do dia",
+    "stock_value": "Valor do stock",
+    "month_revenue": "Vendas do mês",
+    "stock_status": "Estado do stock",
+    "out_of_stock": "Esgotado",
+    "low_stock": "Stock baixo",
+    "overstock": "Excesso de stock",
+    "normal": "Normal",
+    "profitability_analysis": "Análise de rentabilidade",
+    "recent_sales": "Vendas recentes",
+    "stock_evolution": "Evolução do valor do stock (7d)",
+    "critical_products": "Produtos críticos",
+    "see_more": "Ver mais",
+    "see_less": "Ver menos"
+  },
+  "products": {
+    "title": "Produtos",
+    "search": "Pesquisar um produto...",
+    "add_product": "Adicionar produto",
+    "products_total": "produtos no total",
+    "out_of_stock": "Esgotado",
+    "low_stock": "Stock baixo",
+    "overstock": "Excesso de stock",
+    "normal": "Normal",
+    "history": "Hist.",
+    "edit": "Editar",
+    "add_stock": "+Stock",
+    "remove_stock": "-Stock",
+    "delete": "Elim.",
+    "all": "Todos",
+    "catalog": "Catálogo"
+  },
+  "accounting": {
+    "title": "Contabilidade",
+    "revenue": "Faturação",
+    "sales_count": "Vendas realizadas",
+    "avg_basket": "Cesto médio",
+    "total_expenses": "Total de despesas",
+    "expenses": "Despesas",
+    "reports": "Relatórios",
+    "new_report": "Novo relatório",
+    "add_expense": "Registar despesa",
+    "payment_methods": "Vendas por método de pagamento",
+    "revenue_evolution": "Evolução das receitas",
+    "daily": "Diário",
+    "weekly": "Semanal",
+    "monthly": "Mensal",
+    "export_pdf": "Exportar PDF",
+    "export_excel": "Exportar Excel",
+    "empty_expenses": "Nenhuma despesa registada",
+    "expense_name": "Designação da despesa",
+    "amount": "Montante",
+    "category": "Categoria",
+    "date": "Data",
+    "expense_modal_title": "Detalhes da despesa",
+    "expense_added": "Despesa registada com sucesso",
+    "confirm_delete_expense": "Deseja eliminar esta despesa?",
+    "top_products": "Top Produtos (Volume)",
+    "recent_sales": "Vendas recentes",
+    "balance": "Balanço",
+    "profit": "Lucro",
+    "loss": "Prejuízo",
+    "margin_on_sales": "Margem comercial",
+    "margin_percentage": "Margem: {{percentage}}%",
+    "revenue_info": "Total de vendas no período antes da dedução das despesas.",
+    "margin_on_sales_info": "Diferença entre o preço de venda e o custo de compra dos produtos vendidos.",
+    "net_profit": "Resultado líquido",
+    "net_profit_info": "Lucro real após dedução de todas as despesas (renda, transporte, etc.).",
+    "stock_value_purchase": "Valor do stock (Compra)",
+    "stock_value_selling": "Valor de venda: {{value}}",
+    "losses": "Perdas / Avarias",
+    "loss_reasons": "{{count}} motivo(s) de perda",
+    "items_sold": "Artigos vendidos",
+    "avg_sale": "Cesto médio: {{value}}",
+    "supplier_purchases": "Compras a fornecedores",
+    "purchases_count": "{{count}} encomenda(s)",
+    "cost_cogs": "Custo de compra",
+    "gross_margin": "Margem bruta",
+    "payment_cash": "Dinheiro",
+    "payment_mobile_money": "Mobile Money",
+    "payment_card": "Cartão",
+    "payment_transfer": "Transferência",
+    "payment_credit": "Crédito cliente",
+    "see_other_expenses": "Ver mais {{count}}",
+    "invalid_amount": "Montante inválido",
+    "save_error": "Erro ao guardar",
+    "delete_error": "Erro ao eliminar",
+    "confirm_expense": "Confirmar despesa de {{amount}}?",
+    "no_expenses": "Sem despesas",
+    "expenses_categories": {
+      "rent": "Renda",
+      "salary": "Salário",
+      "transport": "Transporte",
+      "merchandise": "Mercadoria",
+      "electricity": "Eletricidade",
+      "water": "Água",
+      "internet": "Internet",
+      "other": "Outro"
+    },
+    "report_title": "RELATÓRIO DE ATIVIDADE",
+    "period_label": "Período:",
+    "top_products_title": "Top 10 Produtos por Desempenho",
+    "expenses_details_title": "Detalhe das despesas",
+    "col_product": "Produto",
+    "col_sold": "Vendidos",
+    "col_revenue": "Fat.",
+    "col_profit": "Lucro",
+    "col_category": "Categoria",
+    "col_description": "Descrição",
+    "col_amount": "Montante",
+    "generated_on": "Gerado a {{date}} por Stockman",
+    "invoice_title": "FATURA",
+    "recipient_label": "Cliente",
+    "invoice_ref": "Ref",
+    "invoice_date": "Data",
+    "payment_method_label": "Método",
+    "notes_label": "Notas"
+  },
+  "orders": {
+    "title": "Encomendas",
+    "suppliers": "Fornecedores",
+    "bulk": "Encomendas coletivas",
+    "returns": "Devoluções",
+    "returns_credit_notes": "Devoluções & Notas de crédito",
+    "new_order": "Nova encomenda",
+    "validate_reception": "Validar receção",
+    "all": "Todas",
+    "pending": "Pendente",
+    "confirmed": "Confirmada",
+    "shipped": "Expedida",
+    "shipping": "Em curso",
+    "received": "Recebida",
+    "delivered": "Entregue",
+    "cancelled": "Cancelada",
+    "partially_delivered": "Parcial",
+    "approved": "Aprovada",
+    "completed": "Concluída",
+    "rejected": "Rejeitada",
+    "empty": "Nenhuma encomenda encontrada",
+    "details": "Detalhes",
+    "order_detail": "Detalhe da encomenda",
+    "items_count": "{{count}} artigo(s)",
+    "total": "Total",
+    "orders_count": "{{count}} encomenda(s)",
+    "returns_count": "{{count}} devolução(ões)",
+    "all_suppliers": "Todos os fornecedores",
+    "active_credit_notes": "Notas de crédito ativas",
+    "credit_notes_count": "{{count}} nota(s) de crédito",
+    "available": "Disponível",
+    "no_returns": "Sem devoluções",
+    "no_returns_desc": "As devoluções aparecerão aqui",
+    "no_orders": "Sem encomendas",
+    "no_orders_desc": "Crie a sua primeira encomenda a fornecedor",
+    "no_orders_bulk_desc": "Nenhuma encomenda coletiva em curso",
+    "supplier": "Fornecedor",
+    "customer": "Cliente",
+    "status": "Estado",
+    "dates": "Datas",
+    "created_at": "Criada a",
+    "updated_at": "Atualizada a",
+    "expected_delivery": "Entrega prevista",
+    "items": "Artigos",
+    "see_more_items": "Ver mais {{count}} artigos",
+    "rate_supplier": "Avaliar o fornecedor",
+    "touch_star": "Toque numa estrela",
+    "history": "Histórico",
+    "total_orders": "{{count}} encomendas no total",
+    "partial_delivery": "Receção parcial",
+    "enter_received_quantities": "Insira as quantidades recebidas",
+    "ordered": "Encomendado",
+    "already_received": "Já recebido",
+    "partial_notes_placeholder": "Ex: Embalagem danificada...",
+    "complete_return_generate_credit_note": "Concluir devolução e gerar nota de crédito",
+    "new_return": "Nova devolução",
+    "return_type": "Tipo de devolução",
+    "items_to_return": "Artigos a devolver",
+    "reason": "Motivo",
+    "reason_placeholder": "Defeito...",
+    "add_product_placeholder": "Adicionar um produto...",
+    "return_notes_placeholder": "Motivo da devolução...",
+    "total_return": "Total devolução",
+    "create_return": "Criar devolução",
+    "confirm_advance_status": "Deseja avançar para o estado {{nextStatus}}?",
+    "advance_status": "Confirmar avanço",
+    "update_error": "Erro na atualização",
+    "confirm_cancel": "Tem a certeza que deseja cancelar?",
+    "cancel_order": "Cancelar encomenda",
+    "cancel_error": "Erro no cancelamento",
+    "pdf_error": "Erro na geração do PDF",
+    "confirm_partial_delivery": "Confirmar receção parcial? O stock será atualizado.",
+    "add_at_least_one_item": "Adicione pelo menos um artigo",
+    "return_created_success": "Devolução criada com sucesso",
+    "create_return_error": "Não foi possível criar a devolução",
+    "store_config_missing": "Configuração da loja em falta",
+    "return_completed_credit_note_generated": "Devolução concluída e nota de crédito gerada",
+    "complete_return_error": "Não foi possível concluir a devolução",
+    "confirm_complete_return": "Confirmar conclusão da devolução?",
+    "confirmation": "Confirmação",
+    "return_detail": "Detalhe da devolução",
+    "customer_return": "Devolução de cliente",
+    "supplier_return": "Devolução a fornecedor",
+    "returned_items": "Artigos devolvidos",
+    "credit_note_generated": "Nota de crédito gerada",
+    "related_order": "Encomenda relacionada",
+    "confirm_receipt": "Confirmar receção"
+  },
+  "crm": {
+    "title": "CRM & Fidelização",
+    "total_spent": "Vendas totais",
+    "active_clients": "Ativos (30d)",
+    "loyalty_strategy": "Estratégia de fidelização",
+    "points": "Pontos de fidelização",
+    "reward_threshold": "Limiar de recompensa",
+    "marketing": "Marketing",
+    "whatsapp_campaign": "Campanha WhatsApp",
+    "search_placeholder": "Pesquisar um cliente...",
+    "add_customer": "Novo cliente",
+    "tier_bronze": "Bronze",
+    "tier_silver": "Prata",
+    "tier_gold": "Ouro",
+    "tier_platinum": "Platina",
+    "debt": "Dívida",
+    "last_purchase": "Última compra"
+  },
+  "pos": {
+    "title": "Caixa (POS)",
+    "search_placeholder": "Pesquisar um produto...",
+    "cart": "Carrinho",
+    "empty_cart": "O carrinho está vazio",
+    "clear": "Limpar",
+    "checkout": "Pagamento",
+    "cash": "Dinheiro",
+    "mobile_money": "Mobile Money",
+    "credit": "Venda a crédito",
+    "insufficient_stock": "Stock insuficiente",
+    "success": "Venda registada"
+  },
+  "supplier": {
+    "dashboard": "Dashboard Fornecedor",
+    "catalog": "O meu Catálogo",
+    "orders": "Encomendas recebidas",
+    "pending_orders": "Encomendas pendentes",
+    "revenue_month": "Faturação do mês",
+    "avg_order": "Encomenda média",
+    "active_clients": "Clientes ativos",
+    "reviews": "Avaliações de clientes",
+    "top_products": "Top Produtos",
+    "accept": "Aceitar",
+    "refuse": "Recusar",
+    "ship": "Expedir",
+    "min_order": "Enc. mín.",
+    "available": "Disponível",
+    "unavailable": "Indisponível",
+    "categories": "Categorias",
+    "delivery_zones": "Zonas de entrega"
+  },
+  "suppliers": {
+    "title": "Fornecedores",
+    "subtitle": "Gerir os seus contactos e encomendas",
+    "my_suppliers": "Os meus Fornecedores",
+    "marketplace": "Marketplace",
+    "search_placeholder": "Nome, contacto, produto, telefone...",
+    "sort_by": "Ordenar por",
+    "sort_name": "Nome A-Z",
+    "sort_recent": "Recentes",
+    "sort_delay": "Prazo de entrega",
+    "filter_by": "Filtrar por",
+    "with_phone": "Com telefone",
+    "with_email": "Com email",
+    "reset_filters": "Reiniciar filtros",
+    "ai_suggestions": "Sugestões de reabastecimento (IA)",
+    "no_results": "Sem resultados",
+    "no_suppliers": "Sem fornecedores",
+    "add_suppliers_hint": "Adicione os seus fornecedores habituais",
+    "supplier_count": "{{count}} fornecedor(es)",
+    "supplier_search_count": "{{count}} fornecedor(es) para \"{{search}}\"",
+    "critical_alert": "CRÍTICO",
+    "alert": "Alerta",
+    "suggestion_order_title": "Sugestão de encomenda",
+    "suggestion_order_desc": "{{product}}: Stock atual {{current}}. Sugestão: encomendar {{suggested}} unidades a {{supplier}}.",
+    "later": "Mais tarde",
+    "draft_success": "Encomenda guardada como rascunho",
+    "call": "Chamada",
+    "visit": "Visita",
+    "other": "Outro",
+    "whatsapp_log": "Conversa WhatsApp iniciada pela app",
+    "delete_title": "Eliminar fornecedor",
+    "delete_confirm": "Deseja realmente eliminar \"{{name}}\"?",
+    "save_error": "Não foi possível guardar o fornecedor",
+    "delete_error": "Não foi possível eliminar",
+    "linked_products": "Produtos associados ({{count}})",
+    "link_product": "Associar produto",
+    "no_linked_products": "Nenhum produto associado a este fornecedor",
+    "link_hint": "Associe os seus produtos para acompanhar preços e facilitar encomendas",
+    "stock_value": "Valor do stock",
+    "low_stock_count": "{{count}} produto(s)",
+    "in_stock": "Em stock",
+    "supplier_price": "Preço do fornecedor",
+    "selling_price": "Preço de venda",
+    "unlink": "Desassociar",
+    "order_history": "Histórico de encomendas",
+    "no_orders": "Nenhuma encomenda efetuada",
+    "invoices_safe": "Cofre de faturas",
+    "add_invoice_feature": "Função de upload em breve",
+    "no_invoices": "Nenhuma fatura registada",
+    "add_note": "Adicionar nota",
+    "log_placeholder": "Detalhes da interação...",
+    "interaction_log": "Registo de interações",
+    "no_logs": "Sem histórico de interações",
+    "financial_summary": "Resumo financeiro",
+    "total_volume": "Volume total pago",
+    "pending_payment": "Pagamento pendente",
+    "key_indicators": "Indicadores chave",
+    "avg_delivery_time": "Prazo médio de entrega",
+    "successful_deliveries": "Entregas bem-sucedidas",
+    "reliable_supplier": "Este fornecedor é muito fiável nos prazos.",
+    "warning_supplier": "Preveja uma margem de segurança para as suas encomendas.",
+    "select_product": "Selecionar um produto:",
+    "no_products_available": "Nenhum produto disponível",
+    "link": "Associar",
+    "edit_supplier": "Editar fornecedor",
+    "new_supplier": "Novo fornecedor",
+    "form_name": "Nome *",
+    "form_name_placeholder": "Nome comercial",
+    "form_contact": "Contacto",
+    "form_contact_placeholder": "Nome do contacto",
+    "form_phone": "Telefone",
+    "form_phone_placeholder": "+351 XX XX XX XX",
+    "form_email": "Email",
+    "form_email_placeholder": "email@exemplo.pt",
+    "form_address": "Morada",
+    "form_address_placeholder": "Localização",
+    "form_products": "Produtos habituais",
+    "form_products_placeholder": "Arroz, azeite, açúcar...",
+    "form_delay": "Prazo de entrega",
+    "form_delay_placeholder": "Ex: 2-3 dias",
+    "form_payment": "Condições de pagamento",
+    "form_payment_placeholder": "Ex: Na entrega",
+    "form_notes": "Notas",
+    "form_notes_placeholder": "Observações...",
+    "payment_label": "Pagamento",
+    "low_stock_label": "Stock baixo",
+    "out_of_stock": "Esgotado",
+    "low_stock": "Stock baixo",
+    "stock": "Stock",
+    "status_paid": "Pago",
+    "status_unpaid": "Por pagar",
+    "phone_missing": "Número de telefone não indicado",
+    "whatsapp_not_installed": "WhatsApp não está instalado neste dispositivo",
+    "order_action": "Encomendar",
+    "invite": "Convidar a inscrever-se",
+    "invite_sent": "Convite enviado",
+    "invite_sent_desc": "Um convite foi enviado para {{email}}",
+    "invite_error": "Não foi possível enviar o convite",
+    "send_message": "Enviar mensagem",
+    "log_error": "Não foi possível adicionar o registo",
+    "product_link_error": "Não foi possível associar o produto",
+    "product_unlink_error": "Não foi possível desassociar o produto",
+    "supplier_no_phone_error": "Nenhum fornecedor associado a este produto"
   },
   "bulk_import": {
     "title": "Importação CSV",
@@ -49,5 +471,18 @@
     "field_purchase_price": "Preço de compra",
     "field_min_stock": "Stock mínimo",
     "field_description": "Descrição"
+  },
+  "modals": {
+    "cancel": "Cancelar",
+    "save": "Guardar",
+    "confirm": "Confirmar",
+    "close": "Fechar",
+    "loading": "A carregar...",
+    "error": "Ocorreu um erro",
+    "success": "Operação bem-sucedida",
+    "delete_confirm": "Deseja realmente eliminar este elemento?",
+    "order_creation": "Criação de encomenda",
+    "receipt": "Recibo digital",
+    "chat": "Mensagens"
   }
 }
