--- a/frontend/locales/ro.json
+++ b/frontend/locales/ro.json
@@ -1,15 +1,437 @@
 {
     "common": {
-        "search": "...",
-        "filter": "...",
-        "loading": "...",
-        "cancel": "...",
-        "confirm": "...",
-        "save": "...",
-        "delete": "...",
-        "edit": "...",
-        "success": "...",
-        "error": "..."
+        "search": "Căutare",
+        "filter": "Filtru",
+        "loading": "Se încarcă...",
+        "cancel": "Anulare",
+        "confirm": "Confirmă",
+        "save": "Salvează",
+        "delete": "Șterge",
+        "edit": "Editează",
+        "success": "Succes",
+        "error": "Eroare",
+        "language_choice": "Alege limba",
+        "items_count": "{{count}} element(e)",
+        "my_shop": "Magazinul meu",
+        "periods": {
+            "7d": "7z",
+            "30d": "30z",
+            "90d": "90z",
+            "1y": "1a",
+            "custom": "Personalizat",
+            "from": "De la",
+            "to": "la",
+            "apply": "Aplică"
+        }
+    },
+    "marketplace": {
+        "title": "Marketplace",
+        "suppliers": "Furnizori din Marketplace",
+        "products": "Produse",
+        "search_supplier": "Caută un furnizor...",
+        "search_product": "Caută un produs...",
+        "city_filter": "Filtrează după oraș...",
+        "category": "Categorie",
+        "min_rating": "Rating minim",
+        "verified_only": "Doar verificați",
+        "price_range": "Interval de preț",
+        "min_price": "Min",
+        "max_price": "Max",
+        "all": "Toate",
+        "star": "⭐",
+        "apply": "Aplică",
+        "reset": "Resetează",
+        "empty_suppliers": "Niciun furnizor găsit",
+        "empty_products": "Niciun produs găsit",
+        "modify_criteria": "Modificați criteriile de căutare",
+        "filters": "Filtre",
+        "city": "Oraș",
+        "send_invitation": "Trimite invitație",
+        "contact": "Contact"
+    },
+    "settings": {
+        "account": "Cont",
+        "application": "Aplicație",
+        "security": "Securitate",
+        "about": "Despre",
+        "logout": "Deconectare",
+        "dark_mode": "Mod întunecat",
+        "simple_mode": "Mod simplificat",
+        "notifications": "Notificări push",
+        "sync": "Sincronizare",
+        "team": "Gestionare echipă",
+        "modules": "Module active",
+        "reminders": "Reguli de memento",
+        "version": "Versiune",
+        "language": "Limbă",
+        "biometrics": "Biometrie (Face ID / Amprentă)",
+        "biometrics_desc": "Folosește recunoaștere biometrică",
+        "pin_required": "Activați mai întâi codul PIN pentru a folosi biometria."
+    },
+    "dashboard": {
+        "title": "Panou de control",
+        "greeting": "Bună ziua, {{name}}",
+        "sub_greeting": "Iată starea stocului dvs.",
+        "today_revenue": "Venit zilnic",
+        "today_sales": "Vânzări zilnice",
+        "stock_value": "Valoare stoc",
+        "month_revenue": "Vânzări lunare",
+        "stock_status": "Stare stoc",
+        "out_of_stock": "Stoc epuizat",
+        "low_stock": "Stoc scăzut",
+        "overstock": "Suprastoc",
+        "normal": "Normal",
+        "profitability_analysis": "Analiză rentabilitate",
+        "recent_sales": "Vânzări recente",
+        "stock_evolution": "Evoluția valorii stocului (7z)",
+        "critical_products": "Produse critice",
+        "see_more": "Vezi mai mult",
+        "see_less": "Vezi mai puțin"
+    },
+    "products": {
+        "title": "Produse",
+        "search": "Caută un produs...",
+        "add_product": "Adaugă produs",
+        "products_total": "produse în total",
+        "out_of_stock": "Stoc epuizat",
+        "low_stock": "Stoc scăzut",
+        "overstock": "Suprastoc",
+        "normal": "Normal",
+        "history": "Ist.",
+        "edit": "Editare",
+        "add_stock": "+Stoc",
+        "remove_stock": "-Stoc",
+        "delete": "Șterge",
+        "all": "Toate",
+        "catalog": "Catalog"
+    },
+    "accounting": {
+        "title": "Contabilitate",
+        "revenue": "Venituri",
+        "sales_count": "Număr vânzări",
+        "avg_basket": "Coș mediu",
+        "total_expenses": "Cheltuieli totale",
+        "expenses": "Cheltuieli",
+        "reports": "Rapoarte",
+        "new_report": "Raport nou",
+        "add_expense": "Adaugă cheltuială",
+        "payment_methods": "Vânzări pe metodă de plată",
+        "revenue_evolution": "Evoluția veniturilor",
+        "daily": "Zilnic",
+        "weekly": "Săptămânal",
+        "monthly": "Lunar",
+        "export_pdf": "Export PDF",
+        "export_excel": "Export Excel",
+        "empty_expenses": "Nicio cheltuială înregistrată",
+        "expense_name": "Nume cheltuială",
+        "amount": "Sumă",
+        "category": "Categorie",
+        "date": "Data",
+        "expense_modal_title": "Detalii cheltuială",
+        "expense_added": "Cheltuială salvată cu succes",
+        "confirm_delete_expense": "Sigur doriți să ștergeți această cheltuială?",
+        "top_products": "Produse de top (volum)",
+        "recent_sales": "Vânzări recente",
+        "balance": "Sold",
+        "profit": "Profit",
+        "loss": "Pierdere",
+        "margin_on_sales": "Marjă brută",
+        "margin_percentage": "Marjă: {{percentage}}%",
+        "revenue_info": "Venituri totale din vânzări înainte de cheltuieli.",
+        "margin_on_sales_info": "Diferența dintre prețul de vânzare și costul de achiziție.",
+        "net_profit": "Profit net",
+        "net_profit_info": "Profitul real după deducerea tuturor cheltuielilor.",
+        "stock_value_purchase": "Valoare stoc (cost)",
+        "stock_value_selling": "Valoare vânzări: {{value}}",
+        "losses": "Pierderi / Daune",
+        "loss_reasons": "{{count}} motiv(e) de pierdere",
+        "items_sold": "Articole vândute",
+        "avg_sale": "Coș mediu: {{value}}",
+        "supplier_purchases": "Achiziții de la furnizori",
+        "purchases_count": "{{count}} comandă(zi)",
+        "cost_cogs": "Cost bunuri vândute",
+        "gross_margin": "Marjă brută",
+        "payment_cash": "Numerar",
+        "payment_mobile_money": "Bani mobili",
+        "payment_card": "Card",
+        "payment_transfer": "Transfer",
+        "payment_credit": "Credit client",
+        "see_other_expenses": "Vezi încă {{count}}",
+        "invalid_amount": "Sumă invalidă",
+        "save_error": "Eroare la salvare",
+        "delete_error": "Eroare la ștergere",
+        "confirm_expense": "Confirmați cheltuiala de {{amount}}?",
+        "no_expenses": "Fără cheltuieli",
+        "expenses_categories": {
+            "rent": "Chirie",
+            "salary": "Salariu",
+            "transport": "Transport",
+            "merchandise": "Marfă",
+            "electricity": "Electricitate",
+            "water": "Apă",
+            "internet": "Internet",
+            "other": "Altele"
+        },
+        "report_title": "RAPORT DE ACTIVITATE",
+        "period_label": "Perioada:",
+        "top_products_title": "Top 10 produse după performanță",
+        "expenses_details_title": "Detalii cheltuieli",
+        "col_product": "Produs",
+        "col_sold": "Vândut",
+        "col_revenue": "Venit",
+        "col_profit": "Profit",
+        "col_category": "Categorie",
+        "col_description": "Descriere",
+        "col_amount": "Sumă",
+        "generated_on": "Generat pe {{date}} de Stockman",
+        "invoice_title": "FACTURĂ",
+        "recipient_label": "Client",
+        "invoice_ref": "Ref.",
+        "invoice_date": "Data",
+        "payment_method_label": "Metodă",
+        "notes_label": "Note"
+    },
+    "orders": {
+        "title": "Comenzi",
+        "suppliers": "Furnizori",
+        "bulk": "Comenzi en-gros",
+        "returns": "Returnări și credit",
+        "returns_credit_notes": "Returnări și note de credit",
+        "new_order": "Comandă nouă",
+        "validate_reception": "Validare recepție",
+        "all": "Toate",
+        "pending": "În așteptare",
+        "confirmed": "Confirmat",
+        "shipped": "Expediat",
+        "shipping": "Expediere",
+        "received": "Recepționat",
+        "delivered": "Livrat",
+        "cancelled": "Anulat",
+        "partially_delivered": "Livrat parțial",
+        "approved": "Aprobat",
+        "completed": "Finalizat",
+        "rejected": "Respins",
+        "empty": "Nicio comandă găsită",
+        "details": "Detalii comandă",
+        "order_detail": "Detalii comandă",
+        "items_count": "{{count}} articol(e)",
+        "total": "Total",
+        "orders_count": "{{count}} comandă(zi)",
+        "returns_count": "{{count}} returnare(ări)",
+        "all_suppliers": "Toți furnizorii",
+        "active_credit_notes": "Note de credit active",
+        "credit_notes_count": "{{count}} notă(e) de credit",
+        "available": "Disponibil",
+        "no_returns": "Fără returnări",
+        "no_returns_desc": "Returnările vor apărea aici",
+        "no_orders": "Fără comenzi",
+        "no_orders_desc": "Creați prima comandă către furnizor",
+        "no_orders_bulk_desc": "Nicio comandă en-gros în curs",
+        "supplier": "Furnizor",
+        "customer": "Client",
+        "status": "Status",
+        "dates": "Date",
+        "created_at": "Creat la",
+        "updated_at": "Actualizat la",
+        "expected_delivery": "Livrare estimată",
+        "items": "Articole",
+        "see_more_items": "Vezi încă {{count}} articole",
+        "rate_supplier": "Evaluează furnizorul",
+        "touch_star": "Atingeți o stea",
+        "history": "Istoric",
+        "total_orders": "{{count}} comenzi în total",
+        "partial_delivery": "Livrare parțială",
+        "enter_received_quantities": "Introduceți cantitățile recepționate",
+        "ordered": "Comandat",
+        "already_received": "Recepționat",
+        "partial_notes_placeholder": "Ex: Colet deteriorat...",
+        "complete_return_generate_credit_note": "Finalizare returnare și generare notă de credit",
+        "new_return": "Returnare nouă",
+        "return_type": "Tip returnare",
+        "items_to_return": "Articole de returnat",
+        "reason": "Motiv",
+        "reason_placeholder": "Defect...",
+        "add_product_placeholder": "Adaugă un produs...",
+        "return_notes_placeholder": "Motivul returnării...",
+        "total_return": "Total returnare",
+        "create_return": "Creează returnare",
+        "confirm_advance_status": "Confirmați schimbarea statusului la {{nextStatus}}?",
+        "advance_status": "Confirmă schimbarea statusului",
+        "update_error": "Eroare la actualizarea statusului",
+        "confirm_cancel": "Sigur doriți să anulați?",
+        "cancel_order": "Anulează comanda",
+        "cancel_error": "Eroare la anularea comenzii",
+        "pdf_error": "Eroare la generarea PDF",
+        "confirm_partial_delivery": "Confirmați livrarea parțială? Stocul va fi actualizat.",
+        "add_at_least_one_item": "Adăugați cel puțin un articol",
+        "return_created_success": "Returnare creată cu succes",
+        "create_return_error": "Nu s-a putut crea returnarea",
+        "store_config_missing": "Configurația magazinului lipsește",
+        "return_completed_credit_note_generated": "Returnare finalizată și notă de credit generată",
+        "complete_return_error": "Nu s-a putut finaliza returnarea",
+        "confirm_complete_return": "Confirmați finalizarea returnării?",
+        "confirmation": "Confirmare",
+        "return_detail": "Detalii returnare",
+        "customer_return": "Returnare client",
+        "supplier_return": "Returnare furnizor",
+        "returned_items": "Articole returnate",
+        "credit_note_generated": "Notă de credit generată",
+        "related_order": "Comandă asociată",
+        "confirm_receipt": "Confirmă recepția"
+    },
+    "crm": {
+        "title": "CRM și Fidelizare",
+        "total_spent": "Vânzări totale",
+        "active_clients": "Activi (30z)",
+        "loyalty_strategy": "Strategie de fidelizare",
+        "points": "Puncte de fidelitate",
+        "reward_threshold": "Prag de recompensă",
+        "marketing": "Marketing",
+        "whatsapp_campaign": "Campanie WhatsApp",
+        "search_placeholder": "Caută client...",
+        "add_customer": "Client nou",
+        "tier_bronze": "Bronz",
+        "tier_silver": "Argint",
+        "tier_gold": "Aur",
+        "tier_platinum": "Platină",
+        "debt": "Datorie",
+        "last_purchase": "Ultima achiziție"
+    },
+    "pos": {
+        "title": "Punct de vânzare",
+        "search_placeholder": "Caută produs...",
+        "cart": "Coș",
+        "empty_cart": "Coșul este gol",
+        "clear": "Golește",
+        "checkout": "Finalizează",
+        "cash": "Numerar",
+        "mobile_money": "Bani mobili",
+        "credit": "Vânzare pe credit",
+        "insufficient_stock": "Stoc insuficient",
+        "success": "Vânzare înregistrată"
+    },
+    "supplier": {
+        "dashboard": "Panou furnizor",
+        "catalog": "Catalogul meu",
+        "orders": "Comenzi primite",
+        "pending_orders": "Comenzi în așteptare",
+        "revenue_month": "Venit luna aceasta",
+        "avg_order": "Comandă medie",
+        "active_clients": "Clienți activi",
+        "reviews": "Recenzii clienți",
+        "top_products": "Produse de top",
+        "accept": "Acceptă",
+        "refuse": "Refuză",
+        "ship": "Expediază",
+        "min_order": "Comandă min.",
+        "available": "Disponibil",
+        "unavailable": "Indisponibil",
+        "categories": "Categorii",
+        "delivery_zones": "Zone de livrare"
+    },
+    "suppliers": {
+        "title": "Furnizori",
+        "subtitle": "Gestionați contactele și comenzile",
+        "my_suppliers": "Furnizorii mei",
+        "marketplace": "Marketplace",
+        "search_placeholder": "Nume, contact, produs, telefon...",
+        "sort_by": "Sortare după",
+        "sort_name": "Nume A-Z",
+        "sort_recent": "Recente",
+        "sort_delay": "Timp de livrare",
+        "filter_by": "Filtrare",
+        "with_phone": "Cu telefon",
+        "with_email": "Cu email",
+        "reset_filters": "Resetează filtrele",
+        "ai_suggestions": "Sugestii de reaprovizionare (AI)",
+        "no_results": "Fără rezultate",
+        "no_suppliers": "Fără furnizori",
+        "add_suppliers_hint": "Adăugați furnizorii dvs. obișnuiți",
+        "supplier_count": "{{count}} furnizor(i)",
+        "supplier_search_count": "{{count}} furnizor(i) pentru \"{{search}}\"",
+        "critical_alert": "CRITIC",
+        "alert": "Alertă",
+        "suggestion_order_title": "Sugestie de comandă",
+        "suggestion_order_desc": "{{product}}: Stoc actual {{current}}. Sugestie: comandați {{suggested}} unități de la {{supplier}}.",
+        "later": "Mai târziu",
+        "draft_success": "Ciornă de comandă creată",
+        "call": "Sună",
+        "visit": "Vizită",
+        "other": "Altele",
+        "whatsapp_log": "Conversație WhatsApp inițiată din aplicație",
+        "delete_title": "Șterge furnizor",
+        "delete_confirm": "Sigur doriți să ștergeți \"{{name}}\"?",
+        "save_error": "Nu s-a putut salva furnizorul",
+        "delete_error": "Nu s-a putut șterge",
+        "linked_products": "Produse asociate ({{count}})",
+        "link_product": "Asociază produs",
+        "no_linked_products": "Niciun produs asociat acestui furnizor",
+        "link_hint": "Asociați produsele pentru a urmări prețurile și a facilita comenzile",
+        "stock_value": "Valoare stoc",
+        "low_stock_count": "{{count}} produs(e)",
+        "in_stock": "În stoc",
+        "supplier_price": "Preț furnizor",
+        "selling_price": "Preț de vânzare",
+        "unlink": "Deasociază",
+        "order_history": "Istoric comenzi",
+        "no_orders": "Nicio comandă plasată",
+        "invoices_safe": "Seif facturi",
+        "add_invoice_feature": "Funcția de încărcare va fi disponibilă în curând",
+        "no_invoices": "Nicio factură înregistrată",
+        "add_note": "Adaugă notă",
+        "log_placeholder": "Detalii interacțiune...",
+        "interaction_log": "Jurnal interacțiuni",
+        "no_logs": "Fără istoric de interacțiuni",
+        "financial_summary": "Rezumat financiar",
+        "total_volume": "Volum total plătit",
+        "pending_payment": "Plată în așteptare",
+        "key_indicators": "Indicatori cheie",
+        "avg_delivery_time": "Timp mediu de livrare",
+        "successful_deliveries": "Livrări reușite",
+        "reliable_supplier": "Acest furnizor este foarte fiabil în termene.",
+        "warning_supplier": "Prevedeți o marjă de siguranță pentru comenzi.",
+        "select_product": "Selectați un produs:",
+        "no_products_available": "Niciun produs disponibil",
+        "link": "Asociază",
+        "edit_supplier": "Editează furnizor",
+        "new_supplier": "Furnizor nou",
+        "form_name": "Nume *",
+        "form_name_placeholder": "Numele firmei",
+        "form_contact": "Contact",
+        "form_contact_placeholder": "Persoană de contact",
+        "form_phone": "Telefon",
+        "form_phone_placeholder": "+40 XXX XXX XXX",
+        "form_email": "Email",
+        "form_email_placeholder": "email@exemplu.ro",
+        "form_address": "Adresă",
+        "form_address_placeholder": "Locație",
+        "form_products": "Produse furnizate",
+        "form_products_placeholder": "Orez, ulei, zahăr...",
+        "form_delay": "Termen de livrare",
+        "form_delay_placeholder": "Ex: 2-3 zile",
+        "form_payment": "Condiții de plată",
+        "form_payment_placeholder": "Ex: La livrare",
+        "form_notes": "Note",
+        "form_notes_placeholder": "Observații...",
+        "payment_label": "Plată",
+        "low_stock_label": "Stoc scăzut",
+        "out_of_stock": "Stoc epuizat",
+        "low_stock": "Stoc scăzut",
+        "stock": "Stoc",
+        "status_paid": "Plătit",
+        "status_unpaid": "Neplătit",
+        "phone_missing": "Număr de telefon lipsă",
+        "whatsapp_not_installed": "WhatsApp nu este instalat pe acest dispozitiv",
+        "order_action": "Comandă",
+        "invite": "Invită să se alăture",
+        "invite_sent": "Invitație trimisă",
+        "invite_sent_desc": "O invitație a fost trimisă la {{email}}",
+        "invite_error": "Nu s-a putut trimite invitația",
+        "send_message": "Trimite un mesaj",
+        "log_error": "Nu s-a putut adăuga înregistrarea",
+        "product_link_error": "Nu s-a putut asocia produsul",
+        "product_unlink_error": "Nu s-a putut deasocia produsul",
+        "supplier_no_phone_error": "Niciun furnizor asociat acestui produs"
     },
     "bulk_import": {
         "title": "Import CSV",
@@ -49,5 +471,18 @@
         "field_purchase_price": "Preț de achiziție",
         "field_min_stock": "Stoc minim",
         "field_description": "Descriere"
+    },
+    "modals": {
+        "cancel": "Anulare",
+        "save": "Salvează",
+        "confirm": "Confirmă",
+        "close": "Închide",
+        "loading": "Se încarcă...",
+        "error": "A apărut o eroare",
+        "success": "Operațiune reușită",
+        "delete_confirm": "Sigur doriți să ștergeți acest element?",
+        "order_creation": "Creare comandă",
+        "receipt": "Bon digital",
+        "chat": "Mesaje"
     }
 }
