--- a/frontend/locales/ru.json
+++ b/frontend/locales/ru.json
@@ -1,15 +1,437 @@
 {
     "common": {
-        "search": "...",
-        "filter": "...",
-        "loading": "...",
-        "cancel": "...",
-        "confirm": "...",
-        "save": "...",
-        "delete": "...",
-        "edit": "...",
-        "success": "...",
-        "error": "..."
+        "search": "Поиск",
+        "filter": "Фильтр",
+        "loading": "Загрузка...",
+        "cancel": "Отмена",
+        "confirm": "Подтвердить",
+        "save": "Сохранить",
+        "delete": "Удалить",
+        "edit": "Редактировать",
+        "success": "Успешно",
+        "error": "Ошибка",
+        "language_choice": "Выберите язык",
+        "items_count": "{{count}} элемент(ов)",
+        "my_shop": "Мой магазин",
+        "periods": {
+            "7d": "7д",
+            "30d": "30д",
+            "90d": "90д",
+            "1y": "1г",
+            "custom": "Другой",
+            "from": "С",
+            "to": "по",
+            "apply": "Применить"
+        }
+    },
+    "marketplace": {
+        "title": "Маркетплейс",
+        "suppliers": "Поставщики маркетплейса",
+        "products": "Товары",
+        "search_supplier": "Поиск поставщика...",
+        "search_product": "Поиск товара...",
+        "city_filter": "Фильтр по городу...",
+        "category": "Категория",
+        "min_rating": "Минимальный рейтинг",
+        "verified_only": "Только проверенные",
+        "price_range": "Диапазон цен",
+        "min_price": "Мин",
+        "max_price": "Макс",
+        "all": "Все",
+        "star": "⭐",
+        "apply": "Применить",
+        "reset": "Сбросить",
+        "empty_suppliers": "Поставщики не найдены",
+        "empty_products": "Товары не найдены",
+        "modify_criteria": "Измените критерии поиска",
+        "filters": "Фильтры",
+        "city": "Город",
+        "send_invitation": "Отправить приглашение",
+        "contact": "Контакт"
+    },
+    "settings": {
+        "account": "Аккаунт",
+        "application": "Приложение",
+        "security": "Безопасность",
+        "about": "О приложении",
+        "logout": "Выйти",
+        "dark_mode": "Тёмная тема",
+        "simple_mode": "Упрощённый режим",
+        "notifications": "Push-уведомления",
+        "sync": "Синхронизация",
+        "team": "Управление командой",
+        "modules": "Активные модули",
+        "reminders": "Правила напоминаний",
+        "version": "Версия",
+        "language": "Язык",
+        "biometrics": "Биометрия (Face ID / Отпечаток)",
+        "biometrics_desc": "Использовать биометрическую идентификацию",
+        "pin_required": "Сначала включите PIN-код для использования биометрии."
+    },
+    "dashboard": {
+        "title": "Панель управления",
+        "greeting": "Здравствуйте, {{name}}",
+        "sub_greeting": "Вот состояние вашего склада",
+        "today_revenue": "Дневная выручка",
+        "today_sales": "Продажи за день",
+        "stock_value": "Стоимость запасов",
+        "month_revenue": "Продажи за месяц",
+        "stock_status": "Состояние запасов",
+        "out_of_stock": "Нет в наличии",
+        "low_stock": "Мало на складе",
+        "overstock": "Избыток",
+        "normal": "В норме",
+        "profitability_analysis": "Анализ рентабельности",
+        "recent_sales": "Последние продажи",
+        "stock_evolution": "Динамика стоимости запасов (7д)",
+        "critical_products": "Критические товары",
+        "see_more": "Показать больше",
+        "see_less": "Показать меньше"
+    },
+    "products": {
+        "title": "Товары",
+        "search": "Поиск товара...",
+        "add_product": "Добавить товар",
+        "products_total": "товаров всего",
+        "out_of_stock": "Нет в наличии",
+        "low_stock": "Мало на складе",
+        "overstock": "Избыток",
+        "normal": "В норме",
+        "history": "Ист.",
+        "edit": "Ред.",
+        "add_stock": "+Запас",
+        "remove_stock": "-Запас",
+        "delete": "Удал.",
+        "all": "Все",
+        "catalog": "Каталог"
+    },
+    "accounting": {
+        "title": "Бухгалтерия",
+        "revenue": "Выручка",
+        "sales_count": "Количество продаж",
+        "avg_basket": "Средний чек",
+        "total_expenses": "Общие расходы",
+        "expenses": "Расходы",
+        "reports": "Отчёты",
+        "new_report": "Новый отчёт",
+        "add_expense": "Добавить расход",
+        "payment_methods": "Продажи по способу оплаты",
+        "revenue_evolution": "Динамика выручки",
+        "daily": "Ежедневно",
+        "weekly": "Еженедельно",
+        "monthly": "Ежемесячно",
+        "export_pdf": "Экспорт PDF",
+        "export_excel": "Экспорт Excel",
+        "empty_expenses": "Расходов не зафиксировано",
+        "expense_name": "Название расхода",
+        "amount": "Сумма",
+        "category": "Категория",
+        "date": "Дата",
+        "expense_modal_title": "Детали расхода",
+        "expense_added": "Расход успешно сохранён",
+        "confirm_delete_expense": "Вы уверены, что хотите удалить этот расход?",
+        "top_products": "Топ товаров (по объёму)",
+        "recent_sales": "Последние продажи",
+        "balance": "Баланс",
+        "profit": "Прибыль",
+        "loss": "Убыток",
+        "margin_on_sales": "Валовая маржа",
+        "margin_percentage": "Маржа: {{percentage}}%",
+        "revenue_info": "Общая выручка от продаж до вычета расходов.",
+        "margin_on_sales_info": "Разница между ценой продажи и себестоимостью.",
+        "net_profit": "Чистая прибыль",
+        "net_profit_info": "Фактическая прибыль после вычета всех расходов.",
+        "stock_value_purchase": "Стоимость запасов (себестоимость)",
+        "stock_value_selling": "Стоимость продаж: {{value}}",
+        "losses": "Потери / Повреждения",
+        "loss_reasons": "{{count}} причин(а) потерь",
+        "items_sold": "Продано единиц",
+        "avg_sale": "Средний чек: {{value}}",
+        "supplier_purchases": "Закупки у поставщиков",
+        "purchases_count": "{{count}} заказ(ов)",
+        "cost_cogs": "Себестоимость",
+        "gross_margin": "Валовая маржа",
+        "payment_cash": "Наличные",
+        "payment_mobile_money": "Мобильные деньги",
+        "payment_card": "Карта",
+        "payment_transfer": "Перевод",
+        "payment_credit": "Кредит клиента",
+        "see_other_expenses": "Ещё {{count}}",
+        "invalid_amount": "Неверная сумма",
+        "save_error": "Ошибка сохранения",
+        "delete_error": "Ошибка удаления",
+        "confirm_expense": "Подтвердить расход на {{amount}}?",
+        "no_expenses": "Нет расходов",
+        "expenses_categories": {
+            "rent": "Аренда",
+            "salary": "Зарплата",
+            "transport": "Транспорт",
+            "merchandise": "Товар",
+            "electricity": "Электричество",
+            "water": "Вода",
+            "internet": "Интернет",
+            "other": "Прочее"
+        },
+        "report_title": "ОТЧЁТ О ДЕЯТЕЛЬНОСТИ",
+        "period_label": "Период:",
+        "top_products_title": "Топ-10 товаров по эффективности",
+        "expenses_details_title": "Детализация расходов",
+        "col_product": "Товар",
+        "col_sold": "Продано",
+        "col_revenue": "Выручка",
+        "col_profit": "Прибыль",
+        "col_category": "Категория",
+        "col_description": "Описание",
+        "col_amount": "Сумма",
+        "generated_on": "Сформировано {{date}} в Stockman",
+        "invoice_title": "СЧЁТ-ФАКТУРА",
+        "recipient_label": "Клиент",
+        "invoice_ref": "Номер",
+        "invoice_date": "Дата",
+        "payment_method_label": "Способ оплаты",
+        "notes_label": "Примечания"
+    },
+    "orders": {
+        "title": "Заказы",
+        "suppliers": "Поставщики",
+        "bulk": "Оптовые заказы",
+        "returns": "Возвраты и кредит",
+        "returns_credit_notes": "Возвраты и кредитные ноты",
+        "new_order": "Новый заказ",
+        "validate_reception": "Подтвердить приёмку",
+        "all": "Все",
+        "pending": "В ожидании",
+        "confirmed": "Подтверждён",
+        "shipped": "Отправлен",
+        "shipping": "Доставка",
+        "received": "Получен",
+        "delivered": "Доставлен",
+        "cancelled": "Отменён",
+        "partially_delivered": "Частично доставлен",
+        "approved": "Одобрен",
+        "completed": "Завершён",
+        "rejected": "Отклонён",
+        "empty": "Заказов не найдено",
+        "details": "Детали заказа",
+        "order_detail": "Детали заказа",
+        "items_count": "{{count}} позиция(й)",
+        "total": "Итого",
+        "orders_count": "{{count}} заказ(ов)",
+        "returns_count": "{{count}} возврат(ов)",
+        "all_suppliers": "Все поставщики",
+        "active_credit_notes": "Активные кредитные ноты",
+        "credit_notes_count": "{{count}} кредитная(ых) нота(ы)",
+        "available": "Доступно",
+        "no_returns": "Нет возвратов",
+        "no_returns_desc": "Возвраты будут отображаться здесь",
+        "no_orders": "Нет заказов",
+        "no_orders_desc": "Создайте свой первый заказ поставщику",
+        "no_orders_bulk_desc": "Нет оптовых заказов в процессе",
+        "supplier": "Поставщик",
+        "customer": "Клиент",
+        "status": "Статус",
+        "dates": "Даты",
+        "created_at": "Создан",
+        "updated_at": "Обновлён",
+        "expected_delivery": "Ожидаемая доставка",
+        "items": "Позиции",
+        "see_more_items": "Ещё {{count}} позиций",
+        "rate_supplier": "Оценить поставщика",
+        "touch_star": "Нажмите на звезду",
+        "history": "История",
+        "total_orders": "{{count}} заказов всего",
+        "partial_delivery": "Частичная доставка",
+        "enter_received_quantities": "Введите полученные количества",
+        "ordered": "Заказано",
+        "already_received": "Получено",
+        "partial_notes_placeholder": "Напр.: Повреждённая упаковка...",
+        "complete_return_generate_credit_note": "Завершить возврат и создать кредитную ноту",
+        "new_return": "Новый возврат",
+        "return_type": "Тип возврата",
+        "items_to_return": "Товары к возврату",
+        "reason": "Причина",
+        "reason_placeholder": "Дефект...",
+        "add_product_placeholder": "Добавить товар...",
+        "return_notes_placeholder": "Причина возврата...",
+        "total_return": "Сумма возврата",
+        "create_return": "Создать возврат",
+        "confirm_advance_status": "Подтвердить смену статуса на {{nextStatus}}?",
+        "advance_status": "Подтвердить смену статуса",
+        "update_error": "Ошибка обновления статуса",
+        "confirm_cancel": "Вы уверены, что хотите отменить?",
+        "cancel_order": "Отменить заказ",
+        "cancel_error": "Ошибка отмены заказа",
+        "pdf_error": "Ошибка генерации PDF",
+        "confirm_partial_delivery": "Подтвердить частичную доставку? Запасы будут обновлены.",
+        "add_at_least_one_item": "Добавьте хотя бы одну позицию",
+        "return_created_success": "Возврат успешно создан",
+        "create_return_error": "Не удалось создать возврат",
+        "store_config_missing": "Конфигурация магазина отсутствует",
+        "return_completed_credit_note_generated": "Возврат завершён и кредитная нота создана",
+        "complete_return_error": "Не удалось завершить возврат",
+        "confirm_complete_return": "Подтвердить завершение возврата?",
+        "confirmation": "Подтверждение",
+        "return_detail": "Детали возврата",
+        "customer_return": "Возврат от клиента",
+        "supplier_return": "Возврат поставщику",
+        "returned_items": "Возвращённые товары",
+        "credit_note_generated": "Кредитная нота создана",
+        "related_order": "Связанный заказ",
+        "confirm_receipt": "Подтвердить приёмку"
+    },
+    "crm": {
+        "title": "CRM и лояльность",
+        "total_spent": "Общие продажи",
+        "active_clients": "Активные (30д)",
+        "loyalty_strategy": "Стратегия лояльности",
+        "points": "Баллы лояльности",
+        "reward_threshold": "Порог вознаграждения",
+        "marketing": "Маркетинг",
+        "whatsapp_campaign": "Кампания WhatsApp",
+        "search_placeholder": "Поиск клиента...",
+        "add_customer": "Новый клиент",
+        "tier_bronze": "Бронза",
+        "tier_silver": "Серебро",
+        "tier_gold": "Золото",
+        "tier_platinum": "Платина",
+        "debt": "Задолженность",
+        "last_purchase": "Последняя покупка"
+    },
+    "pos": {
+        "title": "Точка продаж",
+        "search_placeholder": "Поиск товара...",
+        "cart": "Корзина",
+        "empty_cart": "Корзина пуста",
+        "clear": "Очистить",
+        "checkout": "Оформить",
+        "cash": "Наличные",
+        "mobile_money": "Мобильные деньги",
+        "credit": "Продажа в кредит",
+        "insufficient_stock": "Недостаточно запасов",
+        "success": "Продажа зафиксирована"
+    },
+    "supplier": {
+        "dashboard": "Панель поставщика",
+        "catalog": "Мой каталог",
+        "orders": "Полученные заказы",
+        "pending_orders": "Заказы в ожидании",
+        "revenue_month": "Выручка за месяц",
+        "avg_order": "Средний заказ",
+        "active_clients": "Активные клиенты",
+        "reviews": "Отзывы клиентов",
+        "top_products": "Топ товаров",
+        "accept": "Принять",
+        "refuse": "Отклонить",
+        "ship": "Отправить",
+        "min_order": "Мин. заказ",
+        "available": "В наличии",
+        "unavailable": "Нет в наличии",
+        "categories": "Категории",
+        "delivery_zones": "Зоны доставки"
+    },
+    "suppliers": {
+        "title": "Поставщики",
+        "subtitle": "Управление контактами и заказами",
+        "my_suppliers": "Мои поставщики",
+        "marketplace": "Маркетплейс",
+        "search_placeholder": "Имя, контакт, товар, телефон...",
+        "sort_by": "Сортировать по",
+        "sort_name": "Имя А-Я",
+        "sort_recent": "Недавние",
+        "sort_delay": "Срок доставки",
+        "filter_by": "Фильтровать",
+        "with_phone": "С телефоном",
+        "with_email": "С email",
+        "reset_filters": "Сбросить фильтры",
+        "ai_suggestions": "Предложения по пополнению (ИИ)",
+        "no_results": "Нет результатов",
+        "no_suppliers": "Нет поставщиков",
+        "add_suppliers_hint": "Добавьте ваших постоянных поставщиков",
+        "supplier_count": "{{count}} поставщик(ов)",
+        "supplier_search_count": "{{count}} поставщик(ов) по запросу \"{{search}}\"",
+        "critical_alert": "КРИТИЧНО",
+        "alert": "Внимание",
+        "suggestion_order_title": "Предложение заказа",
+        "suggestion_order_desc": "{{product}}: Текущий запас {{current}}. Рекомендуется: заказать {{suggested}} ед. у {{supplier}}.",
+        "later": "Позже",
+        "draft_success": "Черновик заказа создан",
+        "call": "Позвонить",
+        "visit": "Визит",
+        "other": "Другое",
+        "whatsapp_log": "Разговор WhatsApp начат из приложения",
+        "delete_title": "Удалить поставщика",
+        "delete_confirm": "Вы уверены, что хотите удалить \"{{name}}\"?",
+        "save_error": "Не удалось сохранить поставщика",
+        "delete_error": "Не удалось удалить",
+        "linked_products": "Связанные товары ({{count}})",
+        "link_product": "Связать товар",
+        "no_linked_products": "Нет товаров, связанных с этим поставщиком",
+        "link_hint": "Свяжите товары для отслеживания цен и упрощения заказов",
+        "stock_value": "Стоимость запасов",
+        "low_stock_count": "{{count}} товар(ов)",
+        "in_stock": "В наличии",
+        "supplier_price": "Цена поставщика",
+        "selling_price": "Цена продажи",
+        "unlink": "Отвязать",
+        "order_history": "История заказов",
+        "no_orders": "Заказов не было",
+        "invoices_safe": "Хранилище счетов",
+        "add_invoice_feature": "Функция загрузки скоро появится",
+        "no_invoices": "Нет сохранённых счетов",
+        "add_note": "Добавить заметку",
+        "log_placeholder": "Детали взаимодействия...",
+        "interaction_log": "Журнал взаимодействий",
+        "no_logs": "Нет истории взаимодействий",
+        "financial_summary": "Финансовая сводка",
+        "total_volume": "Общий объём выплат",
+        "pending_payment": "Ожидание оплаты",
+        "key_indicators": "Ключевые показатели",
+        "avg_delivery_time": "Среднее время доставки",
+        "successful_deliveries": "Успешные доставки",
+        "reliable_supplier": "Этот поставщик очень надёжен в сроках.",
+        "warning_supplier": "Предусмотрите запас времени для заказов.",
+        "select_product": "Выберите товар:",
+        "no_products_available": "Нет доступных товаров",
+        "link": "Связать",
+        "edit_supplier": "Редактировать поставщика",
+        "new_supplier": "Новый поставщик",
+        "form_name": "Название *",
+        "form_name_placeholder": "Название компании",
+        "form_contact": "Контакт",
+        "form_contact_placeholder": "Контактное лицо",
+        "form_phone": "Телефон",
+        "form_phone_placeholder": "+7 XXX XXX XX XX",
+        "form_email": "Email",
+        "form_email_placeholder": "email@primer.ru",
+        "form_address": "Адрес",
+        "form_address_placeholder": "Местоположение",
+        "form_products": "Поставляемые товары",
+        "form_products_placeholder": "Рис, масло, сахар...",
+        "form_delay": "Срок доставки",
+        "form_delay_placeholder": "Напр.: 2-3 дня",
+        "form_payment": "Условия оплаты",
+        "form_payment_placeholder": "Напр.: При доставке",
+        "form_notes": "Заметки",
+        "form_notes_placeholder": "Примечания...",
+        "payment_label": "Оплата",
+        "low_stock_label": "Мало на складе",
+        "out_of_stock": "Нет в наличии",
+        "low_stock": "Мало на складе",
+        "stock": "Запас",
+        "status_paid": "Оплачено",
+        "status_unpaid": "Не оплачено",
+        "phone_missing": "Номер телефона отсутствует",
+        "whatsapp_not_installed": "WhatsApp не установлен на этом устройстве",
+        "order_action": "Заказать",
+        "invite": "Пригласить присоединиться",
+        "invite_sent": "Приглашение отправлено",
+        "invite_sent_desc": "Приглашение было отправлено на {{email}}",
+        "invite_error": "Не удалось отправить приглашение",
+        "send_message": "Отправить сообщение",
+        "log_error": "Не удалось добавить запись",
+        "product_link_error": "Не удалось связать товар",
+        "product_unlink_error": "Не удалось отвязать товар",
+        "supplier_no_phone_error": "Нет поставщика, привязанного к этому товару"
     },
     "bulk_import": {
         "title": "Импорт CSV",
@@ -50,25 +472,17 @@
         "field_min_stock": "Минимальный запас",
         "field_description": "Описание"
     },
-    "marketplace": {
-        "title": "Marketplace",
-        "suppliers": "...",
-        "products": "...",
-        "search_supplier": "...",
-        "search_product": "...",
-        "city_filter": "...",
-        "category": "...",
-        "min_rating": "...",
-        "verified_only": "...",
-        "price_range": "...",
-        "min_price": "...",
-        "max_price": "...",
-        "all": "...",
-        "star": "⭐",
-        "apply": "...",
-        "reset": "...",
-        "empty_suppliers": "...",
-        "empty_products": "...",
-        "modify_criteria": "..."
+    "modals": {
+        "cancel": "Отмена",
+        "save": "Сохранить",
+        "confirm": "Подтвердить",
+        "close": "Закрыть",
+        "loading": "Загрузка...",
+        "error": "Произошла ошибка",
+        "success": "Операция выполнена успешно",
+        "delete_confirm": "Вы уверены, что хотите удалить этот элемент?",
+        "order_creation": "Создание заказа",
+        "receipt": "Электронный чек",
+        "chat": "Сообщения"
     }
 }
