--- a/frontend/locales/tr.json
+++ b/frontend/locales/tr.json
@@ -1,15 +1,437 @@
 {
     "common": {
-        "search": "...",
-        "filter": "...",
-        "loading": "...",
-        "cancel": "...",
-        "confirm": "...",
-        "save": "...",
-        "delete": "...",
-        "edit": "...",
-        "success": "...",
-        "error": "..."
+        "search": "Ara",
+        "filter": "Filtre",
+        "loading": "Yükleniyor...",
+        "cancel": "İptal",
+        "confirm": "Onayla",
+        "save": "Kaydet",
+        "delete": "Sil",
+        "edit": "Düzenle",
+        "success": "Başarılı",
+        "error": "Hata",
+        "language_choice": "Dil Seçin",
+        "items_count": "{{count}} ürün",
+        "my_shop": "Mağazam",
+        "periods": {
+            "7d": "7g",
+            "30d": "30g",
+            "90d": "90g",
+            "1y": "1y",
+            "custom": "Özel",
+            "from": "Başlangıç",
+            "to": "bitiş",
+            "apply": "Uygula"
+        }
+    },
+    "marketplace": {
+        "title": "Pazar Yeri",
+        "suppliers": "Pazar Yeri Tedarikçileri",
+        "products": "Ürünler",
+        "search_supplier": "Tedarikçi ara...",
+        "search_product": "Ürün ara...",
+        "city_filter": "Şehre göre filtrele...",
+        "category": "Kategori",
+        "min_rating": "Minimum Puan",
+        "verified_only": "Sadece Doğrulanmış",
+        "price_range": "Fiyat Aralığı",
+        "min_price": "Min",
+        "max_price": "Maks",
+        "all": "Tümü",
+        "star": "⭐",
+        "apply": "Uygula",
+        "reset": "Sıfırla",
+        "empty_suppliers": "Tedarikçi bulunamadı",
+        "empty_products": "Ürün bulunamadı",
+        "modify_criteria": "Arama kriterlerinizi değiştirin",
+        "filters": "Filtreler",
+        "city": "Şehir",
+        "send_invitation": "Davet Gönder",
+        "contact": "İletişim"
+    },
+    "settings": {
+        "account": "Hesap",
+        "application": "Uygulama",
+        "security": "Güvenlik",
+        "about": "Hakkında",
+        "logout": "Çıkış Yap",
+        "dark_mode": "Karanlık Mod",
+        "simple_mode": "Basit Mod",
+        "notifications": "Anlık Bildirimler",
+        "sync": "Senkronizasyon",
+        "team": "Ekip Yönetimi",
+        "modules": "Aktif Modüller",
+        "reminders": "Hatırlatma Kuralları",
+        "version": "Sürüm",
+        "language": "Dil",
+        "biometrics": "Biyometrik (Face ID / Parmak İzi)",
+        "biometrics_desc": "Biyometrik tanıma kullan",
+        "pin_required": "Biyometriği kullanmak için önce PIN kodunu etkinleştirin."
+    },
+    "dashboard": {
+        "title": "Gösterge Paneli",
+        "greeting": "Merhaba, {{name}}",
+        "sub_greeting": "İşte stok durumunuz",
+        "today_revenue": "Günlük Gelir",
+        "today_sales": "Günlük Satışlar",
+        "stock_value": "Stok Değeri",
+        "month_revenue": "Aylık Satışlar",
+        "stock_status": "Stok Durumu",
+        "out_of_stock": "Stok Tükendi",
+        "low_stock": "Düşük Stok",
+        "overstock": "Fazla Stok",
+        "normal": "Normal",
+        "profitability_analysis": "Kârlılık Analizi",
+        "recent_sales": "Son Satışlar",
+        "stock_evolution": "Stok Değeri Değişimi (7g)",
+        "critical_products": "Kritik Ürünler",
+        "see_more": "Daha fazla",
+        "see_less": "Daha az"
+    },
+    "products": {
+        "title": "Ürünler",
+        "search": "Ürün ara...",
+        "add_product": "Ürün Ekle",
+        "products_total": "toplam ürün",
+        "out_of_stock": "Stok Tükendi",
+        "low_stock": "Düşük Stok",
+        "overstock": "Fazla Stok",
+        "normal": "Normal",
+        "history": "Geçmiş",
+        "edit": "Düzenle",
+        "add_stock": "+Stok",
+        "remove_stock": "-Stok",
+        "delete": "Sil",
+        "all": "Tümü",
+        "catalog": "Katalog"
+    },
+    "accounting": {
+        "title": "Muhasebe",
+        "revenue": "Gelir",
+        "sales_count": "Satış Sayısı",
+        "avg_basket": "Ortalama Sepet",
+        "total_expenses": "Toplam Giderler",
+        "expenses": "Giderler",
+        "reports": "Raporlar",
+        "new_report": "Yeni Rapor",
+        "add_expense": "Gider Ekle",
+        "payment_methods": "Ödeme Yöntemine Göre Satışlar",
+        "revenue_evolution": "Gelir Değişimi",
+        "daily": "Günlük",
+        "weekly": "Haftalık",
+        "monthly": "Aylık",
+        "export_pdf": "PDF Dışa Aktar",
+        "export_excel": "Excel Dışa Aktar",
+        "empty_expenses": "Kayıtlı gider yok",
+        "expense_name": "Gider Adı",
+        "amount": "Tutar",
+        "category": "Kategori",
+        "date": "Tarih",
+        "expense_modal_title": "Gider Detayları",
+        "expense_added": "Gider başarıyla kaydedildi",
+        "confirm_delete_expense": "Bu gideri silmek istediğinizden emin misiniz?",
+        "top_products": "En Çok Satan Ürünler (Adet)",
+        "recent_sales": "Son Satışlar",
+        "balance": "Bakiye",
+        "profit": "Kâr",
+        "loss": "Zarar",
+        "margin_on_sales": "Brüt Marj",
+        "margin_percentage": "Marj: {{percentage}}%",
+        "revenue_info": "Giderler öncesi toplam satış geliri.",
+        "margin_on_sales_info": "Satış fiyatı ile alış maliyeti arasındaki fark.",
+        "net_profit": "Net Kâr",
+        "net_profit_info": "Tüm giderler düşüldükten sonraki gerçek kâr.",
+        "stock_value_purchase": "Stok Değeri (Maliyet)",
+        "stock_value_selling": "Satış Değeri: {{value}}",
+        "losses": "Kayıplar / Hasarlar",
+        "loss_reasons": "{{count}} kayıp nedeni",
+        "items_sold": "Satılan Ürünler",
+        "avg_sale": "Ort. Sepet: {{value}}",
+        "supplier_purchases": "Tedarikçi Alımları",
+        "purchases_count": "{{count}} sipariş",
+        "cost_cogs": "SMM",
+        "gross_margin": "Brüt Marj",
+        "payment_cash": "Nakit",
+        "payment_mobile_money": "Mobil Ödeme",
+        "payment_card": "Kart",
+        "payment_transfer": "Havale",
+        "payment_credit": "Müşteri Kredisi",
+        "see_other_expenses": "{{count}} daha gör",
+        "invalid_amount": "Geçersiz tutar",
+        "save_error": "Kaydetme hatası",
+        "delete_error": "Silme hatası",
+        "confirm_expense": "{{amount}} giderini onaylıyor musunuz?",
+        "no_expenses": "Gider yok",
+        "expenses_categories": {
+            "rent": "Kira",
+            "salary": "Maaş",
+            "transport": "Ulaşım",
+            "merchandise": "Mal",
+            "electricity": "Elektrik",
+            "water": "Su",
+            "internet": "İnternet",
+            "other": "Diğer"
+        },
+        "report_title": "FAALİYET RAPORU",
+        "period_label": "Dönem:",
+        "top_products_title": "Performansa Göre İlk 10 Ürün",
+        "expenses_details_title": "Gider Detayları",
+        "col_product": "Ürün",
+        "col_sold": "Satılan",
+        "col_revenue": "Gelir",
+        "col_profit": "Kâr",
+        "col_category": "Kategori",
+        "col_description": "Açıklama",
+        "col_amount": "Tutar",
+        "generated_on": "{{date}} tarihinde Stockman tarafından oluşturuldu",
+        "invoice_title": "FATURA",
+        "recipient_label": "Müşteri",
+        "invoice_ref": "Ref",
+        "invoice_date": "Tarih",
+        "payment_method_label": "Yöntem",
+        "notes_label": "Notlar"
+    },
+    "orders": {
+        "title": "Siparişler",
+        "suppliers": "Tedarikçiler",
+        "bulk": "Toplu Siparişler",
+        "returns": "İadeler ve Kredi",
+        "returns_credit_notes": "İadeler ve Kredi Notları",
+        "new_order": "Yeni Sipariş",
+        "validate_reception": "Teslim Almayı Onayla",
+        "all": "Tümü",
+        "pending": "Beklemede",
+        "confirmed": "Onaylandı",
+        "shipped": "Gönderildi",
+        "shipping": "Kargoda",
+        "received": "Teslim Alındı",
+        "delivered": "Teslim Edildi",
+        "cancelled": "İptal Edildi",
+        "partially_delivered": "Kısmen Teslim Edildi",
+        "approved": "Onaylandı",
+        "completed": "Tamamlandı",
+        "rejected": "Reddedildi",
+        "empty": "Sipariş bulunamadı",
+        "details": "Sipariş Detayları",
+        "order_detail": "Sipariş Detayı",
+        "items_count": "{{count}} ürün",
+        "total": "Toplam",
+        "orders_count": "{{count}} sipariş",
+        "returns_count": "{{count}} iade",
+        "all_suppliers": "Tüm tedarikçiler",
+        "active_credit_notes": "Aktif Kredi Notları",
+        "credit_notes_count": "{{count}} kredi notu",
+        "available": "Mevcut",
+        "no_returns": "İade yok",
+        "no_returns_desc": "İadeler burada görünecek",
+        "no_orders": "Sipariş yok",
+        "no_orders_desc": "İlk tedarikçi siparişinizi oluşturun",
+        "no_orders_bulk_desc": "Devam eden toplu sipariş yok",
+        "supplier": "Tedarikçi",
+        "customer": "Müşteri",
+        "status": "Durum",
+        "dates": "Tarihler",
+        "created_at": "Oluşturulma",
+        "updated_at": "Güncelleme",
+        "expected_delivery": "Beklenen teslimat",
+        "items": "Ürünler",
+        "see_more_items": "{{count}} ürün daha gör",
+        "rate_supplier": "Tedarikçiyi puanla",
+        "touch_star": "Bir yıldıza dokun",
+        "history": "Geçmiş",
+        "total_orders": "Toplam {{count}} sipariş",
+        "partial_delivery": "Kısmi Teslimat",
+        "enter_received_quantities": "Teslim alınan miktarları girin",
+        "ordered": "Sipariş edildi",
+        "already_received": "Teslim alındı",
+        "partial_notes_placeholder": "Ör: Hasarlı paket...",
+        "complete_return_generate_credit_note": "İadeyi tamamla ve kredi notu oluştur",
+        "new_return": "Yeni İade",
+        "return_type": "İade Türü",
+        "items_to_return": "İade edilecek ürünler",
+        "reason": "Neden",
+        "reason_placeholder": "Kusur...",
+        "add_product_placeholder": "Ürün ekle...",
+        "return_notes_placeholder": "İade nedeni...",
+        "total_return": "Toplam İade",
+        "create_return": "İade Oluştur",
+        "confirm_advance_status": "Durumu {{nextStatus}} olarak değiştirmek istiyor musunuz?",
+        "advance_status": "Durum Değişikliğini Onayla",
+        "update_error": "Durum güncelleme hatası",
+        "confirm_cancel": "İptal etmek istediğinizden emin misiniz?",
+        "cancel_order": "Siparişi İptal Et",
+        "cancel_error": "Sipariş iptal hatası",
+        "pdf_error": "PDF oluşturma hatası",
+        "confirm_partial_delivery": "Kısmi teslimatı onaylıyor musunuz? Stok güncellenecek.",
+        "add_at_least_one_item": "En az bir ürün ekleyin",
+        "return_created_success": "İade başarıyla oluşturuldu",
+        "create_return_error": "İade oluşturulamadı",
+        "store_config_missing": "Mağaza yapılandırması eksik",
+        "return_completed_credit_note_generated": "İade tamamlandı ve kredi notu oluşturuldu",
+        "complete_return_error": "İade tamamlanamadı",
+        "confirm_complete_return": "İade tamamlamayı onaylıyor musunuz?",
+        "confirmation": "Onay",
+        "return_detail": "İade Detayı",
+        "customer_return": "Müşteri İadesi",
+        "supplier_return": "Tedarikçi İadesi",
+        "returned_items": "İade Edilen Ürünler",
+        "credit_note_generated": "Kredi Notu Oluşturuldu",
+        "related_order": "İlgili Sipariş",
+        "confirm_receipt": "Teslim Almayı Onayla"
+    },
+    "crm": {
+        "title": "CRM ve Sadakat",
+        "total_spent": "Toplam Satışlar",
+        "active_clients": "Aktif (30g)",
+        "loyalty_strategy": "Sadakat Stratejisi",
+        "points": "Sadakat Puanları",
+        "reward_threshold": "Ödül Eşiği",
+        "marketing": "Pazarlama",
+        "whatsapp_campaign": "WhatsApp Kampanyası",
+        "search_placeholder": "Müşteri ara...",
+        "add_customer": "Yeni Müşteri",
+        "tier_bronze": "Bronz",
+        "tier_silver": "Gümüş",
+        "tier_gold": "Altın",
+        "tier_platinum": "Platin",
+        "debt": "Borç",
+        "last_purchase": "Son Alışveriş"
+    },
+    "pos": {
+        "title": "Satış Noktası",
+        "search_placeholder": "Ürün ara...",
+        "cart": "Sepet",
+        "empty_cart": "Sepet boş",
+        "clear": "Temizle",
+        "checkout": "Ödeme",
+        "cash": "Nakit",
+        "mobile_money": "Mobil Ödeme",
+        "credit": "Veresiye Satış",
+        "insufficient_stock": "Yetersiz stok",
+        "success": "Satış kaydedildi"
+    },
+    "supplier": {
+        "dashboard": "Tedarikçi Paneli",
+        "catalog": "Katalogum",
+        "orders": "Alınan Siparişler",
+        "pending_orders": "Bekleyen Siparişler",
+        "revenue_month": "Bu ayki gelir",
+        "avg_order": "Ort. Sipariş",
+        "active_clients": "Aktif Müşteriler",
+        "reviews": "Müşteri Yorumları",
+        "top_products": "En Çok Satan Ürünler",
+        "accept": "Kabul Et",
+        "refuse": "Reddet",
+        "ship": "Gönder",
+        "min_order": "Min. Sipariş",
+        "available": "Mevcut",
+        "unavailable": "Mevcut Değil",
+        "categories": "Kategoriler",
+        "delivery_zones": "Teslimat Bölgeleri"
+    },
+    "suppliers": {
+        "title": "Tedarikçiler",
+        "subtitle": "İletişim ve siparişlerinizi yönetin",
+        "my_suppliers": "Tedarikçilerim",
+        "marketplace": "Pazar Yeri",
+        "search_placeholder": "Ad, kişi, ürün, telefon...",
+        "sort_by": "Sırala",
+        "sort_name": "Ad A-Z",
+        "sort_recent": "Son Eklenen",
+        "sort_delay": "Teslimat süresi",
+        "filter_by": "Filtrele",
+        "with_phone": "Telefonlu",
+        "with_email": "E-postalı",
+        "reset_filters": "Filtreleri sıfırla",
+        "ai_suggestions": "Yenileme Önerileri (AI)",
+        "no_results": "Sonuç yok",
+        "no_suppliers": "Tedarikçi yok",
+        "add_suppliers_hint": "Düzenli tedarikçilerinizi ekleyin",
+        "supplier_count": "{{count}} tedarikçi",
+        "supplier_search_count": "\"{{search}}\" için {{count}} tedarikçi",
+        "critical_alert": "KRİTİK",
+        "alert": "Uyarı",
+        "suggestion_order_title": "Sipariş Önerisi",
+        "suggestion_order_desc": "{{product}}: Mevcut stok {{current}}. Öneri: {{supplier}}'dan {{suggested}} adet sipariş verin.",
+        "later": "Sonra",
+        "draft_success": "Sipariş taslağı başarıyla oluşturuldu",
+        "call": "Ara",
+        "visit": "Ziyaret",
+        "other": "Diğer",
+        "whatsapp_log": "Uygulamadan WhatsApp görüşmesi başlatıldı",
+        "delete_title": "Tedarikçiyi Sil",
+        "delete_confirm": "\"{{name}}\" silmek istediğinizden emin misiniz?",
+        "save_error": "Tedarikçi kaydedilemedi",
+        "delete_error": "Silinemedi",
+        "linked_products": "Bağlı Ürünler ({{count}})",
+        "link_product": "Ürün Bağla",
+        "no_linked_products": "Bu tedarikçiye bağlı ürün yok",
+        "link_hint": "Fiyatları takip etmek ve sipariş kolaylığı için ürünlerinizi bağlayın",
+        "stock_value": "Stok Değeri",
+        "low_stock_count": "{{count}} ürün",
+        "in_stock": "Stokta",
+        "supplier_price": "Tedarikçi Fiyatı",
+        "selling_price": "Satış Fiyatı",
+        "unlink": "Bağlantıyı Kaldır",
+        "order_history": "Sipariş Geçmişi",
+        "no_orders": "Sipariş verilmemiş",
+        "invoices_safe": "Fatura Kasası",
+        "add_invoice_feature": "Yükleme özelliği yakında",
+        "no_invoices": "Kayıtlı fatura yok",
+        "add_note": "Not Ekle",
+        "log_placeholder": "Etkileşim detayları...",
+        "interaction_log": "Etkileşim Günlüğü",
+        "no_logs": "Etkileşim geçmişi yok",
+        "financial_summary": "Finansal Özet",
+        "total_volume": "Toplam Ödeme Tutarı",
+        "pending_payment": "Bekleyen Ödeme",
+        "key_indicators": "Temel Göstergeler",
+        "avg_delivery_time": "Ort. Teslimat Süresi",
+        "successful_deliveries": "Başarılı Teslimatlar",
+        "reliable_supplier": "Bu tedarikçi teslimat sürelerinde çok güvenilir.",
+        "warning_supplier": "Siparişleriniz için güvenlik payı bırakın.",
+        "select_product": "Bir ürün seçin:",
+        "no_products_available": "Mevcut ürün yok",
+        "link": "Bağla",
+        "edit_supplier": "Tedarikçi Düzenle",
+        "new_supplier": "Yeni Tedarikçi",
+        "form_name": "Ad *",
+        "form_name_placeholder": "Firma Adı",
+        "form_contact": "İletişim",
+        "form_contact_placeholder": "İletişim Adı",
+        "form_phone": "Telefon",
+        "form_phone_placeholder": "+90 XXX XXX XX XX",
+        "form_email": "E-posta",
+        "form_email_placeholder": "email@ornek.com.tr",
+        "form_address": "Adres",
+        "form_address_placeholder": "Konum",
+        "form_products": "Tedarik Edilen Ürünler",
+        "form_products_placeholder": "Pirinç, yağ, şeker...",
+        "form_delay": "Teslimat Süresi",
+        "form_delay_placeholder": "Ör: 2-3 gün",
+        "form_payment": "Ödeme Koşulları",
+        "form_payment_placeholder": "Ör: Teslimatta",
+        "form_notes": "Notlar",
+        "form_notes_placeholder": "Açıklamalar...",
+        "payment_label": "Ödeme",
+        "low_stock_label": "Düşük Stok",
+        "out_of_stock": "Stok Tükendi",
+        "low_stock": "Düşük Stok",
+        "stock": "Stok",
+        "status_paid": "Ödendi",
+        "status_unpaid": "Ödenmedi",
+        "phone_missing": "Telefon numarası eksik",
+        "whatsapp_not_installed": "Bu cihazda WhatsApp yüklü değil",
+        "order_action": "Sipariş",
+        "invite": "Katılmaya davet et",
+        "invite_sent": "Davet gönderildi",
+        "invite_sent_desc": "{{email}} adresine bir davet gönderildi",
+        "invite_error": "Davet gönderilemedi",
+        "send_message": "Mesaj gönder",
+        "log_error": "Günlük eklenemedi",
+        "product_link_error": "Ürün bağlanamadı",
+        "product_unlink_error": "Ürün bağlantısı kaldırılamadı",
+        "supplier_no_phone_error": "Bu ürüne bağlı tedarikçi yok"
     },
     "bulk_import": {
         "title": "CSV İçe Aktarma",
@@ -49,5 +471,18 @@
         "field_purchase_price": "Alış fiyatı",
         "field_min_stock": "Minimum stok",
         "field_description": "Açıklama"
+    },
+    "modals": {
+        "cancel": "İptal",
+        "save": "Kaydet",
+        "confirm": "Onayla",
+        "close": "Kapat",
+        "loading": "Yükleniyor...",
+        "error": "Bir hata oluştu",
+        "success": "İşlem başarılı",
+        "delete_confirm": "Bu öğeyi silmek istediğinizden emin misiniz?",
+        "order_creation": "Sipariş Oluşturma",
+        "receipt": "Dijital Fiş",
+        "chat": "Mesajlar"
     }
 }
