--- a/frontend/locales/wo.json
+++ b/frontend/locales/wo.json
@@ -11,7 +11,18 @@
     "success": "Baax na",
     "error": "Njuumte",
     "language_choice": "Tann làmmeñ bi",
-    "items_count": "{{count}} liggéey"
+    "items_count": "{{count}} liggéey",
+    "my_shop": "Sama Bitik",
+    "periods": {
+      "7d": "7b",
+      "30d": "30b",
+      "90d": "90b",
+      "1y": "1 at",
+      "custom": "Boole",
+      "from": "Dalal",
+      "to": "ba",
+      "apply": "Jëfe"
+    }
   },
   "marketplace": {
     "title": "Marketplace",
@@ -32,7 +43,11 @@
     "reset": "Faraat",
     "empty_suppliers": "Gisunu jaaykatt",
     "empty_products": "Gisunu liggéey",
-    "modify_criteria": "Soppi sa seet-seet"
+    "modify_criteria": "Soppi sa seet-seet",
+    "filters": "Sancoon yi",
+    "city": "Dëkk",
+    "send_invitation": "Yónnee woowaanu",
+    "contact": "Jokkoo"
   },
   "settings": {
     "account": "Sa sàqu",
@@ -90,6 +105,334 @@
     "all": "Yépp",
     "catalog": "Catalogue"
   },
+  "accounting": {
+    "title": "Xaalis bi",
+    "revenue": "Njeeg bi",
+    "sales_count": "Limeem jaay yi",
+    "avg_basket": "Waañ wu diggu",
+    "total_expenses": "Dépenses yépp",
+    "expenses": "Dépenses",
+    "reports": "Raport yi",
+    "new_report": "Raport bu bees",
+    "add_expense": "Bind dépense",
+    "payment_methods": "Jaay ci jëfe-jëfe",
+    "revenue_evolution": "Doxaliinu njeeg bi",
+    "daily": "Bés-bés",
+    "weekly": "Ayu-bis",
+    "monthly": "Weer-weer",
+    "export_pdf": "Génne PDF",
+    "export_excel": "Génne Excel",
+    "empty_expenses": "Amul dépense bu bindiku",
+    "expense_name": "Turu dépense bi",
+    "amount": "Lim bi",
+    "category": "Xeet",
+    "date": "Bés bi",
+    "expense_modal_title": "Xam-xam bu dépense bi",
+    "expense_added": "Dépense bi denciku na bu baax",
+    "confirm_delete_expense": "Dëgg nga bëgg far dépense bii?",
+    "top_products": "Liggéey yi gën (Limeem)",
+    "recent_sales": "Jaay yi mujj",
+    "balance": "Taaxu",
+    "profit": "Nafoore",
+    "loss": "Yàq",
+    "margin_on_sales": "Marge commerciale",
+    "margin_percentage": "Marge: {{percentage}}%",
+    "revenue_info": "Njeeg bi yépp ci jamono ji, laata jot dépenses yi.",
+    "margin_on_sales_info": "Diiru njëgu jaay ak njëgu jënd.",
+    "net_profit": "Nafoore bu mujj",
+    "net_profit_info": "Nafoore bu dëgg bi ci kaw dépenses yépp (loyé, transport, etc.).",
+    "stock_value_purchase": "Valeur Stock (Jënd)",
+    "stock_value_selling": "Valeur Jaay: {{value}}",
+    "losses": "Yàq / Sànni",
+    "loss_reasons": "{{count}} laayu yàq",
+    "items_sold": "Liggéey yu jaayku",
+    "avg_sale": "Waañ wu diggu: {{value}}",
+    "supplier_purchases": "Jënd ci jaaykatt yi",
+    "purchases_count": "{{count}} commande(s)",
+    "cost_cogs": "Njëgu jënd",
+    "gross_margin": "Marge Brute",
+    "payment_cash": "Xaalis",
+    "payment_mobile_money": "Mobile Money",
+    "payment_card": "Kàrt",
+    "payment_transfer": "Transfert",
+    "payment_credit": "Crédit ndaw mi",
+    "see_other_expenses": "Xool {{count}} yeneen",
+    "invalid_amount": "Lim bi baaxul",
+    "save_error": "Njuumte ci denc bi",
+    "delete_error": "Njuumte ci far bi",
+    "confirm_expense": "Dëggal dépense bu {{amount}}?",
+    "no_expenses": "Amul dépense",
+    "expenses_categories": {
+      "rent": "Loyé",
+      "salary": "Jàmm",
+      "transport": "Transport",
+      "merchandise": "Njaay",
+      "electricity": "Courant",
+      "water": "Ndox",
+      "internet": "Internet",
+      "other": "Yeneen"
+    },
+    "report_title": "RAPORT BU LIGGÉEY BI",
+    "period_label": "Jamono:",
+    "top_products_title": "Top 10 Liggéey ci jëmm",
+    "expenses_details_title": "Xam-xam bu dépenses yi",
+    "col_product": "Liggéey",
+    "col_sold": "Jaayiku",
+    "col_revenue": "Njeeg",
+    "col_profit": "Nafoore",
+    "col_category": "Xeet",
+    "col_description": "Ndefu",
+    "col_amount": "Lim",
+    "generated_on": "Défar ci {{date}} ci Stockman",
+    "invoice_title": "FACTURE",
+    "recipient_label": "Ndaw mi",
+    "invoice_ref": "Réf",
+    "invoice_date": "Bés bi",
+    "payment_method_label": "Ngir fey",
+    "notes_label": "Bind yi"
+  },
+  "orders": {
+    "title": "Commandes yi",
+    "suppliers": "Jaaykatt yi",
+    "bulk": "Commandes yu mbooloo",
+    "returns": "Dellu",
+    "returns_credit_notes": "Dellu ak Avoirs",
+    "new_order": "Commande bu bees",
+    "validate_reception": "Dëggal joteem",
+    "all": "Yépp",
+    "pending": "Xaaral",
+    "confirmed": "Dëgg na",
+    "shipped": "Yónnee nañu",
+    "shipping": "Ci yoon",
+    "received": "Jot na",
+    "delivered": "Àttee na",
+    "cancelled": "Dindi nañu",
+    "partially_delivered": "Àttee nañu ceŋ",
+    "approved": "Nangoo nañu",
+    "completed": "Jeex na",
+    "rejected": "Bañ nañu",
+    "empty": "Gisunu commande",
+    "details": "Xam-xam yi",
+    "order_detail": "Xam-xam bu commande bi",
+    "items_count": "{{count}} liggéey",
+    "total": "Total",
+    "orders_count": "{{count}} commande(s)",
+    "returns_count": "{{count}} dellu(s)",
+    "all_suppliers": "Jaaykatt yépp",
+    "active_credit_notes": "Avoirs yu dox",
+    "credit_notes_count": "{{count}} avoir(s)",
+    "available": "Ci biir",
+    "no_returns": "Amul dellu",
+    "no_returns_desc": "Dellu yi dina ñu féel fii",
+    "no_orders": "Amul commande",
+    "no_orders_desc": "Defal sa commande bu njëk ci jaaykatt bi",
+    "no_orders_bulk_desc": "Amul commande bu mbooloo ci dox",
+    "supplier": "Jaaykatt",
+    "customer": "Ndaw mi",
+    "status": "Tëdd",
+    "dates": "Bés yi",
+    "created_at": "Defar ci",
+    "updated_at": "Soppi ci",
+    "expected_delivery": "Àttee bu ñu xaaral",
+    "items": "Liggéey yi",
+    "see_more_items": "Xool {{count}} yeneen liggéey",
+    "rate_supplier": "Notaal jaaykatt bi",
+    "touch_star": "Dëbbal benn biddiw",
+    "history": "Jaar-jaari",
+    "total_orders": "{{count}} commandes yépp",
+    "partial_delivery": "Joteem bu ceŋ",
+    "enter_received_quantities": "Duggal li jot",
+    "ordered": "Commande",
+    "already_received": "Jot na",
+    "partial_notes_placeholder": "Misaal: Paquet bu yàq...",
+    "complete_return_generate_credit_note": "Jeexal dellu bi & defal avoir",
+    "new_return": "Dellu bu bees",
+    "return_type": "Xeetu dellu",
+    "items_to_return": "Liggéey yu dellu",
+    "reason": "Laay",
+    "reason_placeholder": "Njuumte...",
+    "add_product_placeholder": "Yokk benn liggéey...",
+    "return_notes_placeholder": "Laay bi...",
+    "total_return": "Total dellu",
+    "create_return": "Defal dellu",
+    "confirm_advance_status": "Dëggal soppiku ci tëdd {{nextStatus}}?",
+    "advance_status": "Dëggal soppiku",
+    "update_error": "Njuumte ci soppiku",
+    "confirm_cancel": "Dëgg nga bëgg dindi?",
+    "cancel_order": "Dindi commande bi",
+    "cancel_error": "Njuumte ci dindi",
+    "pdf_error": "Njuumte ci defar PDF",
+    "confirm_partial_delivery": "Dëggal joteem bu ceŋ? Stock bi dina soppi.",
+    "add_at_least_one_item": "Yokk ben liggéey bu néew",
+    "return_created_success": "Dellu bi defariku na bu baax",
+    "create_return_error": "Mënuloo defar dellu bi",
+    "store_config_missing": "Configuration bitik bi amul",
+    "return_completed_credit_note_generated": "Dellu bi jeexna, avoir bi defariku na",
+    "complete_return_error": "Mënuloo jeexal dellu bi",
+    "confirm_complete_return": "Dëggal jeexalu dellu bi?",
+    "confirmation": "Dëggal",
+    "return_detail": "Xam-xam bu dellu bi",
+    "customer_return": "Dellu ndaw mi",
+    "supplier_return": "Dellu jaaykatt bi",
+    "returned_items": "Liggéey yu dellu",
+    "credit_note_generated": "Avoir bu defariku",
+    "related_order": "Commande bu jëm",
+    "confirm_receipt": "Dëggal joteem"
+  },
+  "crm": {
+    "title": "CRM & Wóor",
+    "total_spent": "Jaay yépp",
+    "active_clients": "Ñu dox (30b)",
+    "loyalty_strategy": "Plan wóor",
+    "points": "Points de wóor",
+    "reward_threshold": "Lim bu xam-xam",
+    "marketing": "Marketing",
+    "whatsapp_campaign": "Campagne WhatsApp",
+    "search_placeholder": "Seetal ndaw mi...",
+    "add_customer": "Ndaw mu bees",
+    "tier_bronze": "Bronze",
+    "tier_silver": "Xaalis",
+    "tier_gold": "Wurus",
+    "tier_platinum": "Platine",
+    "debt": "Bor",
+    "last_purchase": "Jënd bu mujj"
+  },
+  "pos": {
+    "title": "Kees bi (POS)",
+    "search_placeholder": "Seetal liggéey...",
+    "cart": "Waañ bi",
+    "empty_cart": "Waañ bi amul dara",
+    "clear": "Sottil",
+    "checkout": "Fey",
+    "cash": "Xaalis",
+    "mobile_money": "Mobile Money",
+    "credit": "Jaay ci crédit",
+    "insufficient_stock": "Stock bi doyul",
+    "success": "Jaay bi bindiku na"
+  },
+  "supplier": {
+    "dashboard": "Tableau jaaykatt bi",
+    "catalog": "Sama catalogue",
+    "orders": "Commandes yu jot",
+    "pending_orders": "Commandes ci xaaral",
+    "revenue_month": "Njeeg weer wii",
+    "avg_order": "Commande bu diggu",
+    "active_clients": "Ndaw ñu dox",
+    "reviews": "Kadduy ndaw yi",
+    "top_products": "Liggéey yi gën",
+    "accept": "Nangoo",
+    "refuse": "Bañ",
+    "ship": "Yónnee",
+    "min_order": "Commande bu néew",
+    "available": "Ci biir",
+    "unavailable": "Amul",
+    "categories": "Xeet yi",
+    "delivery_zones": "Xare yu àttee"
+  },
+  "suppliers": {
+    "title": "Jaaykatt yi",
+    "subtitle": "Saytu sa contacts ak commandes",
+    "my_suppliers": "Sama jaaykatt yi",
+    "marketplace": "Marketplace",
+    "search_placeholder": "Tur, contact, liggéey, telefon...",
+    "sort_by": "Tëral ci",
+    "sort_name": "Tur A-Z",
+    "sort_recent": "Yi mujj",
+    "sort_delay": "Jamono",
+    "filter_by": "Sancoon",
+    "with_phone": "Ak telefon",
+    "with_email": "Ak email",
+    "reset_filters": "Faraat sancoon yi",
+    "ai_suggestions": "Xalaat bu IA ci stock bi",
+    "no_results": "Amul njariñ",
+    "no_suppliers": "Amul jaaykatt",
+    "add_suppliers_hint": "Yokk sa jaaykatt yi ngay jëfandikoo",
+    "supplier_count": "{{count}} jaaykatt",
+    "supplier_search_count": "{{count}} jaaykatt ci \"{{search}}\"",
+    "critical_alert": "YITTE",
+    "alert": "Mottali",
+    "suggestion_order_title": "Xalaat bu commande",
+    "suggestion_order_desc": "{{product}}: Stock tey {{current}}. Xalaat: commande {{suggested}} ci {{supplier}}.",
+    "later": "Ci kanam",
+    "draft_success": "Brouillon commande bi defar na bu baax",
+    "call": "Woo",
+    "visit": "Xoolte",
+    "other": "Yeneen",
+    "whatsapp_log": "Waxtaan WhatsApp dëbbë nañu ko ci app bi",
+    "delete_title": "Far jaaykatt bi",
+    "delete_confirm": "Dëgg nga bëgg far \"{{name}}\"?",
+    "save_error": "Mënuloo denc jaaykatt bi",
+    "delete_error": "Mënuloo far",
+    "linked_products": "Liggéey yu tëgg ({{count}})",
+    "link_product": "Tëgg liggéey",
+    "no_linked_products": "Amul liggéey bu tëgg ci jaaykatt bii",
+    "link_hint": "Tëgg sa liggéey yi ngir topp njëg yi ak yomb commandes",
+    "stock_value": "Valeur stock",
+    "low_stock_count": "{{count}} liggéey",
+    "in_stock": "Ci biir stock",
+    "supplier_price": "Njëg jaaykatt",
+    "selling_price": "Njëg jaay",
+    "unlink": "Tëggandi",
+    "order_history": "Jaar-jaar commandes",
+    "no_orders": "Amul commande",
+    "invoices_safe": "Coffre Factures",
+    "add_invoice_feature": "Upload dina ñëw",
+    "no_invoices": "Amul facture bu bindiku",
+    "add_note": "Yokk bind",
+    "log_placeholder": "Xam-xam bu jokkoo bi...",
+    "interaction_log": "Jaar-jaar jokkoo",
+    "no_logs": "Amul jaar-jaar",
+    "financial_summary": "Taaxu xaalis",
+    "total_volume": "Limeem xaalis bu fey",
+    "pending_payment": "Ci xaaral fey",
+    "key_indicators": "Cléef yi",
+    "avg_delivery_time": "Jamonu àttee bu diggu",
+    "successful_deliveries": "Àttee yu baax",
+    "reliable_supplier": "Jaaykatt bii dafa wóor lool ci jamono.",
+    "warning_supplier": "Defal marge ci sa commandes.",
+    "select_product": "Tànnal liggéey:",
+    "no_products_available": "Amul liggéey bu ci biir",
+    "link": "Tëgg",
+    "edit_supplier": "Soppi jaaykatt bi",
+    "new_supplier": "Jaaykatt bu bees",
+    "form_name": "Tur *",
+    "form_name_placeholder": "Turu bitik bi",
+    "form_contact": "Contact",
+    "form_contact_placeholder": "Turu contact bi",
+    "form_phone": "Telefon",
+    "form_phone_placeholder": "+221 XX XXX XX XX",
+    "form_email": "Email",
+    "form_email_placeholder": "email@misaal.sn",
+    "form_address": "Adress",
+    "form_address_placeholder": "Fu mu nekk",
+    "form_products": "Liggéey yu ñuy jënd",
+    "form_products_placeholder": "Ceeb, diw, suukër...",
+    "form_delay": "Jamonu àttee",
+    "form_delay_placeholder": "Misaal: 2-3 fan",
+    "form_payment": "Ndigalu fey",
+    "form_payment_placeholder": "Misaal: Ci àttee bi",
+    "form_notes": "Bind yi",
+    "form_notes_placeholder": "Kadduy xam-xam...",
+    "payment_label": "Fey",
+    "low_stock_label": "Stock bu néew",
+    "out_of_stock": "Jeex na",
+    "low_stock": "Néew na",
+    "stock": "Stock",
+    "status_paid": "Fey na",
+    "status_unpaid": "Feyul",
+    "phone_missing": "Numeru telefon amul",
+    "whatsapp_not_installed": "WhatsApp deewul ci sa telefon",
+    "order_action": "Commande",
+    "invite": "Woowaan ngir dugg",
+    "invite_sent": "Woowaan bi yónnee na",
+    "invite_sent_desc": "Woowaan bi yónnee nañu ko ci {{email}}",
+    "invite_error": "Mënuloo yónnee woowaan bi",
+    "send_message": "Yónnee bataaxal",
+    "log_error": "Mënuloo yokk log",
+    "product_link_error": "Mënuloo tëgg liggéey bi",
+    "product_unlink_error": "Mënuloo tëggandi liggéey bi",
+    "supplier_no_phone_error": "Amul jaaykatt bu tëgg ci liggéey bii"
+  },
   "bulk_import": {
     "title": "Duggal CSV",
     "bulk_title": "Duggal bu bari",
@@ -128,5 +471,18 @@
     "field_purchase_price": "Njëgu jënd",
     "field_min_stock": "Stock bu néew",
     "field_description": "Ndefu"
+  },
+  "modals": {
+    "cancel": "Dindi",
+    "save": "Denc",
+    "confirm": "Dëggal",
+    "close": "Tëj",
+    "loading": "Xaaral...",
+    "error": "Am na njuumte",
+    "success": "Dox na bu baax",
+    "delete_confirm": "Dëgg nga bëgg far lii?",
+    "order_creation": "Defar commande",
+    "receipt": "Reçu numérique",
+    "chat": "Bataaxal yi"
   }
 }
