--- a/landing-page/public/locales/en.json
+++ b/landing-page/public/locales/en.json
@@ -4,6 +4,7 @@
         "resources": "Resources",
         "blog": "Blog",
         "home": "Login",
+        "login": "Log In",
         "free_trial": "Free Trial"
     },
     "hero": {
