--- a/frontend/locales/zh.json
+++ b/frontend/locales/zh.json
@@ -1,15 +1,437 @@
 {
     "common": {
-        "search": "...",
-        "filter": "...",
-        "loading": "...",
-        "cancel": "...",
-        "confirm": "...",
-        "save": "...",
-        "delete": "...",
-        "edit": "...",
-        "success": "...",
-        "error": "..."
+        "search": "搜索",
+        "filter": "筛选",
+        "loading": "加载中...",
+        "cancel": "取消",
+        "confirm": "确认",
+        "save": "保存",
+        "delete": "删除",
+        "edit": "编辑",
+        "success": "成功",
+        "error": "错误",
+        "language_choice": "选择语言",
+        "items_count": "{{count}} 件商品",
+        "my_shop": "我的店铺",
+        "periods": {
+            "7d": "7天",
+            "30d": "30天",
+            "90d": "90天",
+            "1y": "1年",
+            "custom": "自定义",
+            "from": "从",
+            "to": "到",
+            "apply": "应用"
+        }
+    },
+    "marketplace": {
+        "title": "市场",
+        "suppliers": "市场供应商",
+        "products": "产品",
+        "search_supplier": "搜索供应商...",
+        "search_product": "搜索产品...",
+        "city_filter": "按城市筛选...",
+        "category": "类别",
+        "min_rating": "最低评分",
+        "verified_only": "仅已验证",
+        "price_range": "价格范围",
+        "min_price": "最低",
+        "max_price": "最高",
+        "all": "全部",
+        "star": "⭐",
+        "apply": "应用",
+        "reset": "重置",
+        "empty_suppliers": "未找到供应商",
+        "empty_products": "未找到产品",
+        "modify_criteria": "修改您的搜索条件",
+        "filters": "筛选条件",
+        "city": "城市",
+        "send_invitation": "发送邀请",
+        "contact": "联系"
+    },
+    "settings": {
+        "account": "账户",
+        "application": "应用程序",
+        "security": "安全",
+        "about": "关于",
+        "logout": "退出登录",
+        "dark_mode": "深色模式",
+        "simple_mode": "简洁模式",
+        "notifications": "推送通知",
+        "sync": "同步",
+        "team": "团队管理",
+        "modules": "活动模块",
+        "reminders": "提醒规则",
+        "version": "版本",
+        "language": "语言",
+        "biometrics": "生物识别（面容ID / 指纹）",
+        "biometrics_desc": "使用生物识别认证",
+        "pin_required": "请先启用PIN码才能使用生物识别。"
+    },
+    "dashboard": {
+        "title": "仪表盘",
+        "greeting": "您好，{{name}}",
+        "sub_greeting": "以下是您的库存状态",
+        "today_revenue": "日收入",
+        "today_sales": "日销售",
+        "stock_value": "库存价值",
+        "month_revenue": "月销售额",
+        "stock_status": "库存状态",
+        "out_of_stock": "缺货",
+        "low_stock": "低库存",
+        "overstock": "超库存",
+        "normal": "正常",
+        "profitability_analysis": "盈利分析",
+        "recent_sales": "近期销售",
+        "stock_evolution": "库存价值变化（7天）",
+        "critical_products": "关键产品",
+        "see_more": "查看更多",
+        "see_less": "收起"
+    },
+    "products": {
+        "title": "产品",
+        "search": "搜索产品...",
+        "add_product": "添加产品",
+        "products_total": "产品总数",
+        "out_of_stock": "缺货",
+        "low_stock": "低库存",
+        "overstock": "超库存",
+        "normal": "正常",
+        "history": "历史",
+        "edit": "编辑",
+        "add_stock": "+库存",
+        "remove_stock": "-库存",
+        "delete": "删除",
+        "all": "全部",
+        "catalog": "目录"
+    },
+    "accounting": {
+        "title": "财务",
+        "revenue": "收入",
+        "sales_count": "销售数量",
+        "avg_basket": "平均客单",
+        "total_expenses": "总支出",
+        "expenses": "支出",
+        "reports": "报表",
+        "new_report": "新建报表",
+        "add_expense": "添加支出",
+        "payment_methods": "按支付方式统计",
+        "revenue_evolution": "收入变化",
+        "daily": "日",
+        "weekly": "周",
+        "monthly": "月",
+        "export_pdf": "导出PDF",
+        "export_excel": "导出Excel",
+        "empty_expenses": "暂无支出记录",
+        "expense_name": "支出名称",
+        "amount": "金额",
+        "category": "类别",
+        "date": "日期",
+        "expense_modal_title": "支出详情",
+        "expense_added": "支出保存成功",
+        "confirm_delete_expense": "确定要删除此支出吗？",
+        "top_products": "热销产品（销量）",
+        "recent_sales": "近期销售",
+        "balance": "余额",
+        "profit": "盈利",
+        "loss": "亏损",
+        "margin_on_sales": "毛利",
+        "margin_percentage": "利润率：{{percentage}}%",
+        "revenue_info": "扣除支出前的总销售收入。",
+        "margin_on_sales_info": "销售价格与采购成本之间的差额。",
+        "net_profit": "净利润",
+        "net_profit_info": "扣除所有支出后的实际利润。",
+        "stock_value_purchase": "库存价值（成本）",
+        "stock_value_selling": "销售价值：{{value}}",
+        "losses": "损耗 / 损坏",
+        "loss_reasons": "{{count}} 个损耗原因",
+        "items_sold": "已售商品",
+        "avg_sale": "平均客单：{{value}}",
+        "supplier_purchases": "供应商采购",
+        "purchases_count": "{{count}} 笔订单",
+        "cost_cogs": "销售成本",
+        "gross_margin": "毛利",
+        "payment_cash": "现金",
+        "payment_mobile_money": "移动支付",
+        "payment_card": "银行卡",
+        "payment_transfer": "转账",
+        "payment_credit": "客户赊账",
+        "see_other_expenses": "查看另外 {{count}} 项",
+        "invalid_amount": "无效金额",
+        "save_error": "保存错误",
+        "delete_error": "删除错误",
+        "confirm_expense": "确认支出 {{amount}}？",
+        "no_expenses": "暂无支出",
+        "expenses_categories": {
+            "rent": "房租",
+            "salary": "工资",
+            "transport": "运输",
+            "merchandise": "商品",
+            "electricity": "电费",
+            "water": "水费",
+            "internet": "网络",
+            "other": "其他"
+        },
+        "report_title": "经营报告",
+        "period_label": "期间：",
+        "top_products_title": "业绩前10名产品",
+        "expenses_details_title": "支出明细",
+        "col_product": "产品",
+        "col_sold": "已售",
+        "col_revenue": "收入",
+        "col_profit": "利润",
+        "col_category": "类别",
+        "col_description": "描述",
+        "col_amount": "金额",
+        "generated_on": "由Stockman于 {{date}} 生成",
+        "invoice_title": "发票",
+        "recipient_label": "客户",
+        "invoice_ref": "编号",
+        "invoice_date": "日期",
+        "payment_method_label": "方式",
+        "notes_label": "备注"
+    },
+    "orders": {
+        "title": "订单",
+        "suppliers": "供应商",
+        "bulk": "批量订单",
+        "returns": "退货与信用",
+        "returns_credit_notes": "退货与信用单",
+        "new_order": "新建订单",
+        "validate_reception": "确认收货",
+        "all": "全部",
+        "pending": "待处理",
+        "confirmed": "已确认",
+        "shipped": "已发货",
+        "shipping": "运输中",
+        "received": "已收货",
+        "delivered": "已送达",
+        "cancelled": "已取消",
+        "partially_delivered": "部分送达",
+        "approved": "已批准",
+        "completed": "已完成",
+        "rejected": "已拒绝",
+        "empty": "未找到订单",
+        "details": "订单详情",
+        "order_detail": "订单详情",
+        "items_count": "{{count}} 件商品",
+        "total": "合计",
+        "orders_count": "{{count}} 笔订单",
+        "returns_count": "{{count}} 笔退货",
+        "all_suppliers": "所有供应商",
+        "active_credit_notes": "有效信用单",
+        "credit_notes_count": "{{count}} 张信用单",
+        "available": "可用",
+        "no_returns": "暂无退货",
+        "no_returns_desc": "退货将显示在此处",
+        "no_orders": "暂无订单",
+        "no_orders_desc": "创建您的第一笔供应商订单",
+        "no_orders_bulk_desc": "没有进行中的批量订单",
+        "supplier": "供应商",
+        "customer": "客户",
+        "status": "状态",
+        "dates": "日期",
+        "created_at": "创建时间",
+        "updated_at": "更新时间",
+        "expected_delivery": "预计送达",
+        "items": "商品",
+        "see_more_items": "查看另外 {{count}} 件商品",
+        "rate_supplier": "评价供应商",
+        "touch_star": "点击星星",
+        "history": "历史",
+        "total_orders": "共 {{count}} 笔订单",
+        "partial_delivery": "部分送达",
+        "enter_received_quantities": "输入收货数量",
+        "ordered": "已下单",
+        "already_received": "已收货",
+        "partial_notes_placeholder": "例：包裹损坏...",
+        "complete_return_generate_credit_note": "完成退货并生成信用单",
+        "new_return": "新建退货",
+        "return_type": "退货类型",
+        "items_to_return": "退货商品",
+        "reason": "原因",
+        "reason_placeholder": "缺陷...",
+        "add_product_placeholder": "添加产品...",
+        "return_notes_placeholder": "退货原因...",
+        "total_return": "退货总额",
+        "create_return": "创建退货",
+        "confirm_advance_status": "确认将状态更改为 {{nextStatus}}？",
+        "advance_status": "确认状态变更",
+        "update_error": "状态更新错误",
+        "confirm_cancel": "确定要取消吗？",
+        "cancel_order": "取消订单",
+        "cancel_error": "取消订单错误",
+        "pdf_error": "生成PDF错误",
+        "confirm_partial_delivery": "确认部分送达？库存将被更新。",
+        "add_at_least_one_item": "请至少添加一件商品",
+        "return_created_success": "退货创建成功",
+        "create_return_error": "无法创建退货",
+        "store_config_missing": "缺少店铺配置",
+        "return_completed_credit_note_generated": "退货完成，信用单已生成",
+        "complete_return_error": "无法完成退货",
+        "confirm_complete_return": "确认完成退货？",
+        "confirmation": "确认",
+        "return_detail": "退货详情",
+        "customer_return": "客户退货",
+        "supplier_return": "供应商退货",
+        "returned_items": "退回商品",
+        "credit_note_generated": "信用单已生成",
+        "related_order": "关联订单",
+        "confirm_receipt": "确认收货"
+    },
+    "crm": {
+        "title": "CRM与忠诚度",
+        "total_spent": "总销售额",
+        "active_clients": "活跃（30天）",
+        "loyalty_strategy": "忠诚度策略",
+        "points": "忠诚度积分",
+        "reward_threshold": "奖励门槛",
+        "marketing": "营销",
+        "whatsapp_campaign": "WhatsApp营销活动",
+        "search_placeholder": "搜索客户...",
+        "add_customer": "新建客户",
+        "tier_bronze": "铜牌",
+        "tier_silver": "银牌",
+        "tier_gold": "金牌",
+        "tier_platinum": "白金",
+        "debt": "欠款",
+        "last_purchase": "最近购买"
+    },
+    "pos": {
+        "title": "收银台",
+        "search_placeholder": "搜索产品...",
+        "cart": "购物车",
+        "empty_cart": "购物车为空",
+        "clear": "清空",
+        "checkout": "结账",
+        "cash": "现金",
+        "mobile_money": "移动支付",
+        "credit": "赊账销售",
+        "insufficient_stock": "库存不足",
+        "success": "销售已记录"
+    },
+    "supplier": {
+        "dashboard": "供应商仪表盘",
+        "catalog": "我的目录",
+        "orders": "收到的订单",
+        "pending_orders": "待处理订单",
+        "revenue_month": "本月收入",
+        "avg_order": "平均订单",
+        "active_clients": "活跃客户",
+        "reviews": "客户评价",
+        "top_products": "热销产品",
+        "accept": "接受",
+        "refuse": "拒绝",
+        "ship": "发货",
+        "min_order": "最低订单",
+        "available": "可用",
+        "unavailable": "不可用",
+        "categories": "类别",
+        "delivery_zones": "配送区域"
+    },
+    "suppliers": {
+        "title": "供应商",
+        "subtitle": "管理您的联系人和订单",
+        "my_suppliers": "我的供应商",
+        "marketplace": "市场",
+        "search_placeholder": "名称、联系人、产品、电话...",
+        "sort_by": "排序",
+        "sort_name": "名称 A-Z",
+        "sort_recent": "最近",
+        "sort_delay": "交货时间",
+        "filter_by": "筛选",
+        "with_phone": "有电话",
+        "with_email": "有邮箱",
+        "reset_filters": "重置筛选",
+        "ai_suggestions": "补货建议（AI）",
+        "no_results": "无结果",
+        "no_suppliers": "暂无供应商",
+        "add_suppliers_hint": "添加您的常用供应商",
+        "supplier_count": "{{count}} 个供应商",
+        "supplier_search_count": "\"{{search}}\" 找到 {{count}} 个供应商",
+        "critical_alert": "紧急",
+        "alert": "警告",
+        "suggestion_order_title": "订单建议",
+        "suggestion_order_desc": "{{product}}：当前库存 {{current}}。建议：从 {{supplier}} 订购 {{suggested}} 件。",
+        "later": "稍后",
+        "draft_success": "订单草稿创建成功",
+        "call": "电话",
+        "visit": "拜访",
+        "other": "其他",
+        "whatsapp_log": "从应用发起WhatsApp对话",
+        "delete_title": "删除供应商",
+        "delete_confirm": "确定要删除"{{name}}"吗？",
+        "save_error": "无法保存供应商",
+        "delete_error": "无法删除",
+        "linked_products": "关联产品（{{count}}）",
+        "link_product": "关联产品",
+        "no_linked_products": "该供应商暂无关联产品",
+        "link_hint": "关联您的产品以跟踪价格并方便下单",
+        "stock_value": "库存价值",
+        "low_stock_count": "{{count}} 个产品",
+        "in_stock": "有库存",
+        "supplier_price": "供应商价格",
+        "selling_price": "销售价格",
+        "unlink": "取消关联",
+        "order_history": "订单历史",
+        "no_orders": "暂无订单",
+        "invoices_safe": "发票保险箱",
+        "add_invoice_feature": "上传功能即将上线",
+        "no_invoices": "暂无发票记录",
+        "add_note": "添加备注",
+        "log_placeholder": "互动详情...",
+        "interaction_log": "互动记录",
+        "no_logs": "暂无互动历史",
+        "financial_summary": "财务摘要",
+        "total_volume": "已付总额",
+        "pending_payment": "待付款",
+        "key_indicators": "关键指标",
+        "avg_delivery_time": "平均交货时间",
+        "successful_deliveries": "成功交付",
+        "reliable_supplier": "该供应商交货非常准时可靠。",
+        "warning_supplier": "建议为您的订单预留安全余量。",
+        "select_product": "选择产品：",
+        "no_products_available": "暂无可用产品",
+        "link": "关联",
+        "edit_supplier": "编辑供应商",
+        "new_supplier": "新建供应商",
+        "form_name": "名称 *",
+        "form_name_placeholder": "企业名称",
+        "form_contact": "联系人",
+        "form_contact_placeholder": "联系人姓名",
+        "form_phone": "电话",
+        "form_phone_placeholder": "+86 XXX XXXX XXXX",
+        "form_email": "邮箱",
+        "form_email_placeholder": "email@shili.cn",
+        "form_address": "地址",
+        "form_address_placeholder": "位置",
+        "form_products": "供应产品",
+        "form_products_placeholder": "大米、食用油、白糖...",
+        "form_delay": "交货时间",
+        "form_delay_placeholder": "例：2-3天",
+        "form_payment": "付款条件",
+        "form_payment_placeholder": "例：货到付款",
+        "form_notes": "备注",
+        "form_notes_placeholder": "备注信息...",
+        "payment_label": "付款",
+        "low_stock_label": "低库存",
+        "out_of_stock": "缺货",
+        "low_stock": "低库存",
+        "stock": "库存",
+        "status_paid": "已付款",
+        "status_unpaid": "未付款",
+        "phone_missing": "缺少电话号码",
+        "whatsapp_not_installed": "此设备未安装WhatsApp",
+        "order_action": "下单",
+        "invite": "邀请加入",
+        "invite_sent": "邀请已发送",
+        "invite_sent_desc": "已向 {{email}} 发送邀请",
+        "invite_error": "无法发送邀请",
+        "send_message": "发送消息",
+        "log_error": "无法添加记录",
+        "product_link_error": "无法关联产品",
+        "product_unlink_error": "无法取消关联产品",
+        "supplier_no_phone_error": "该产品未关联供应商"
     },
     "bulk_import": {
         "title": "CSV导入",
@@ -25,7 +447,7 @@
         "file_label": "文件: {{name}}",
         "products_to_import": "待导入产品: {{count}}",
         "mapped_columns": "已映射列: {{count}}",
-        "preview_count": "预览 (前{{count}}个产品)",
+        "preview_count": "预览（前{{count}}个产品）",
         "price_label": "价格",
         "back": "返回",
         "start_import": "开始导入",
@@ -49,5 +471,18 @@
         "field_purchase_price": "采购价格",
         "field_min_stock": "最低库存",
         "field_description": "描述"
+    },
+    "modals": {
+        "cancel": "取消",
+        "save": "保存",
+        "confirm": "确认",
+        "close": "关闭",
+        "loading": "加载中...",
+        "error": "发生错误",
+        "success": "操作成功",
+        "delete_confirm": "确定要删除此项目吗？",
+        "order_creation": "创建订单",
+        "receipt": "电子收据",
+        "chat": "消息"
     }
 }
